@@ -17,6 +17,7 @@
 package org.compiere.model;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
@@ -159,14 +160,14 @@ public class CalloutInvoice extends CalloutEngine
 			if (rs.next())
 			{
 				//	PriceList & IsTaxIncluded & Currency
-				Integer ii = new Integer(rs.getInt(IsSOTrx ? "M_PriceList_ID" : "PO_PriceList_ID"));
+				Integer ii = Integer.valueOf(rs.getInt(IsSOTrx ? "M_PriceList_ID" : "PO_PriceList_ID"));
 				if (!rs.wasNull())
 					mTab.setValue("M_PriceList_ID", ii);
 				else
 				{	//	get default PriceList
 					int i = Env.getContextAsInt(ctx, "#M_PriceList_ID");
 					if (i != 0)
-						mTab.setValue("M_PriceList_ID", new Integer(i));
+						mTab.setValue("M_PriceList_ID", Integer.valueOf(i));
 				}
 
 				//	PaymentRule
@@ -180,7 +181,7 @@ public class CalloutInvoice extends CalloutEngine
 					mTab.setValue("PaymentRule", s);
 				}
 				//  Payment Term
-				ii = new Integer(rs.getInt(IsSOTrx ? "C_PaymentTerm_ID" : "PO_PaymentTerm_ID"));
+				ii = Integer.valueOf(rs.getInt(IsSOTrx ? "C_PaymentTerm_ID" : "PO_PaymentTerm_ID"));
 				if (!rs.wasNull())
 					mTab.setValue("C_PaymentTerm_ID", ii);
 
@@ -197,7 +198,7 @@ public class CalloutInvoice extends CalloutEngine
 				if (locID == 0)
 					mTab.setValue("C_BPartner_Location_ID", null);
 				else
-					mTab.setValue("C_BPartner_Location_ID", new Integer(locID));
+					mTab.setValue("C_BPartner_Location_ID", Integer.valueOf(locID));
 
 				//	Contact - overwritten by InfoBP selection
 				int contID = rs.getInt("AD_User_ID");
@@ -210,7 +211,7 @@ public class CalloutInvoice extends CalloutEngine
 				if (contID == 0)
 					mTab.setValue("AD_User_ID", null);
 				else
-					mTab.setValue("AD_User_ID", new Integer(contID));
+					mTab.setValue("AD_User_ID", Integer.valueOf(contID));
 
 				//	CreditAvailable
 				if (IsSOTrx)
@@ -346,9 +347,9 @@ public class CalloutInvoice extends CalloutEngine
 		mTab.setValue("PriceLimit", pp.getPriceLimit());
 		mTab.setValue("PriceActual", pp.getPriceStd());
 		mTab.setValue("PriceEntered", pp.getPriceStd());
-		mTab.setValue("C_Currency_ID", new Integer(pp.getC_Currency_ID()));
+		mTab.setValue("C_Currency_ID", Integer.valueOf(pp.getC_Currency_ID()));
 	//	mTab.setValue("Discount", pp.getDiscount());
-		mTab.setValue("C_UOM_ID", new Integer(pp.getC_UOM_ID()));
+		mTab.setValue("C_UOM_ID", Integer.valueOf(pp.getC_UOM_ID()));
 		Env.setContext(ctx, WindowNo, "DiscountSchema", pp.isDiscountSchema() ? "Y" : "N");
 		//
 		return tax (ctx, WindowNo, mTab, mField, value);
@@ -380,7 +381,7 @@ public class CalloutInvoice extends CalloutEngine
 		}
 		mTab.setValue("M_AttributeSetInstance_ID", null);
 		mTab.setValue("S_ResourceAssignment_ID", null);
-		mTab.setValue("C_UOM_ID", new Integer(100));	//	EA
+		mTab.setValue("C_UOM_ID", Integer.valueOf(100));	//	EA
 
 		Env.setContext(ctx, WindowNo, "DiscountSchema", "N");
 		String sql = "SELECT ChargeAmt FROM C_Charge WHERE C_Charge_ID=?";
@@ -477,7 +478,7 @@ public class CalloutInvoice extends CalloutEngine
 		if (C_Tax_ID == 0)
 			mTab.fireDataStatusEEvent(CLogger.retrieveError());
 		else
-			mTab.setValue("C_Tax_ID", new Integer(C_Tax_ID));
+			mTab.setValue("C_Tax_ID", Integer.valueOf(C_Tax_ID));
 		//
 		return amt (ctx, WindowNo, mTab, mField, value);
 	}	//	tax
@@ -500,37 +501,37 @@ public class CalloutInvoice extends CalloutEngine
 			return "";
 
 	//	log.log(Level.WARNING,"amt - init");
-		int C_UOM_To_ID = Env.getContextAsInt(ctx, WindowNo, "C_UOM_ID");
-		int M_Product_ID = Env.getContextAsInt(ctx, WindowNo, "M_Product_ID");
-		int M_PriceList_ID = Env.getContextAsInt(ctx, WindowNo, "M_PriceList_ID");
-		int StdPrecision = MPriceList.getStandardPrecision(ctx, M_PriceList_ID);
-		BigDecimal QtyEntered, QtyInvoiced, PriceEntered, PriceActual, PriceLimit, Discount, PriceList;
+		int uOMToId = Env.getContextAsInt(ctx, WindowNo, "C_UOM_ID");
+		int productId = Env.getContextAsInt(ctx, WindowNo, "M_Product_ID");
+		int priceListId = Env.getContextAsInt(ctx, WindowNo, "M_PriceList_ID");
+		int standardPrecision = MPriceList.getStandardPrecision(ctx, priceListId);
+		BigDecimal quantityEntered, quantityInvoiced, priceEntered, priceActual, priceLimit, discount, priceList;
 		//	get values
-		QtyEntered = (BigDecimal)mTab.getValue("QtyEntered");
-		QtyInvoiced = (BigDecimal)mTab.getValue("QtyInvoiced");
-		log.fine("QtyEntered=" + QtyEntered + ", Invoiced=" + QtyInvoiced + ", UOM=" + C_UOM_To_ID);
+		quantityEntered = (BigDecimal)mTab.getValue("QtyEntered");
+		quantityInvoiced = (BigDecimal)mTab.getValue("QtyInvoiced");
+		log.fine("QtyEntered=" + quantityEntered + ", Invoiced=" + quantityInvoiced + ", UOM=" + uOMToId);
 		//
-		PriceEntered = (BigDecimal)mTab.getValue("PriceEntered");
-		PriceActual = (BigDecimal)mTab.getValue("PriceActual");
+		priceEntered = (BigDecimal)mTab.getValue("PriceEntered");
+		priceActual = (BigDecimal)mTab.getValue("PriceActual");
 	//	Discount = (BigDecimal)mTab.getValue("Discount");
-		PriceLimit = (BigDecimal)mTab.getValue("PriceLimit");
-		PriceList = (BigDecimal)mTab.getValue("PriceList");
-		log.fine("PriceList=" + PriceList + ", Limit=" + PriceLimit + ", Precision=" + StdPrecision);
-		log.fine("PriceEntered=" + PriceEntered + ", Actual=" + PriceActual);// + ", Discount=" + Discount);
+		priceLimit = (BigDecimal)mTab.getValue("PriceLimit");
+		priceList = (BigDecimal)mTab.getValue("PriceList");
+		log.fine("PriceList=" + priceList + ", Limit=" + priceLimit + ", Precision=" + standardPrecision);
+		log.fine("PriceEntered=" + priceEntered + ", Actual=" + priceActual);// + ", Discount=" + Discount);
 
 		//		No Product
-		if ( M_Product_ID == 0 )
+		if ( productId == 0 )
 		{
 			// if price change sync price actual and entered
 			// else ignore
 			if (mField.getColumnName().equals("PriceActual"))
 			{
-				PriceEntered = (BigDecimal) value;
+				priceEntered = (BigDecimal) value;
 				mTab.setValue("PriceEntered", value);
 			}
 			else if (mField.getColumnName().equals("PriceEntered"))
 			{
-				PriceActual = (BigDecimal) value;
+				priceActual = (BigDecimal) value;
 				mTab.setValue("PriceActual", value);
 			}
 		}
@@ -543,55 +544,55 @@ public class CalloutInvoice extends CalloutEngine
 		{
 			int C_BPartner_ID = Env.getContextAsInt(ctx, WindowNo, "C_BPartner_ID");
 			if (mField.getColumnName().equals("QtyEntered"))
-				QtyInvoiced = MUOMConversion.convertProductFrom (ctx, M_Product_ID, 
-					C_UOM_To_ID, QtyEntered);
-			if (QtyInvoiced == null)
-				QtyInvoiced = QtyEntered;
+				quantityInvoiced = MUOMConversion.convertProductFrom (ctx, productId, 
+					uOMToId, quantityEntered);
+			if (quantityInvoiced == null)
+				quantityInvoiced = quantityEntered;
 			boolean IsSOTrx = Env.getContext(ctx, WindowNo, "IsSOTrx").equals("Y");
-			MProductPricing pp = new MProductPricing (M_Product_ID, C_BPartner_ID, QtyInvoiced, IsSOTrx, null);
-			pp.setM_PriceList_ID(M_PriceList_ID);
+			MProductPricing pp = new MProductPricing (productId, C_BPartner_ID, quantityInvoiced, IsSOTrx, null);
+			pp.setM_PriceList_ID(priceListId);
 			int	M_PriceList_Version_ID = Env.getContextAsInt(ctx, WindowNo, "M_PriceList_Version_ID");
 			pp.setM_PriceList_Version_ID(M_PriceList_Version_ID);
 			Timestamp date = (Timestamp)mTab.getValue("DateInvoiced");
 			pp.setPriceDate(date);
 			//
-			PriceEntered = MUOMConversion.convertProductFrom (ctx, M_Product_ID, 
-				C_UOM_To_ID, pp.getPriceStd());
-			if (PriceEntered == null)
-				PriceEntered = pp.getPriceStd();
+			priceEntered = MUOMConversion.convertProductFrom (ctx, productId, 
+				uOMToId, pp.getPriceStd());
+			if (priceEntered == null)
+				priceEntered = pp.getPriceStd();
 			//
 			log.fine("amt - QtyChanged -> PriceActual=" + pp.getPriceStd() 
-				+ ", PriceEntered=" + PriceEntered + ", Discount=" + pp.getDiscount());
+				+ ", PriceEntered=" + priceEntered + ", Discount=" + pp.getDiscount());
 			
-			PriceActual = pp.getPriceStd();
+			priceActual = pp.getPriceStd();
 			mTab.setValue("PriceActual", pp.getPriceStd());
 		//	mTab.setValue("Discount", pp.getDiscount());
-			mTab.setValue("PriceEntered", PriceEntered);
+			mTab.setValue("PriceEntered", priceEntered);
 			Env.setContext(ctx, WindowNo, "DiscountSchema", pp.isDiscountSchema() ? "Y" : "N");
 		}
 		else if (mField.getColumnName().equals("PriceActual"))
 		{
-			PriceActual = (BigDecimal)value;
-			PriceEntered = MUOMConversion.convertProductFrom (ctx, M_Product_ID, 
-				C_UOM_To_ID, PriceActual);
-			if (PriceEntered == null)
-				PriceEntered = PriceActual;
+			priceActual = (BigDecimal)value;
+			priceEntered = MUOMConversion.convertProductFrom (ctx, productId, 
+				uOMToId, priceActual);
+			if (priceEntered == null)
+				priceEntered = priceActual;
 			//
-			log.fine("amt - PriceActual=" + PriceActual 
-				+ " -> PriceEntered=" + PriceEntered);
-			mTab.setValue("PriceEntered", PriceEntered);
+			log.fine("amt - PriceActual=" + priceActual 
+				+ " -> PriceEntered=" + priceEntered);
+			mTab.setValue("PriceEntered", priceEntered);
 		}
 		else if (mField.getColumnName().equals("PriceEntered"))
 		{
-			PriceEntered = (BigDecimal)value;
-			PriceActual = MUOMConversion.convertProductTo (ctx, M_Product_ID, 
-				C_UOM_To_ID, PriceEntered);
-			if (PriceActual == null)
-				PriceActual = PriceEntered;
+			priceEntered = (BigDecimal)value;
+			priceActual = MUOMConversion.convertProductTo (ctx, productId, 
+				uOMToId, priceEntered);
+			if (priceActual == null)
+				priceActual = priceEntered;
 			//
-			log.fine("amt - PriceEntered=" + PriceEntered 
-				+ " -> PriceActual=" + PriceActual);
-			mTab.setValue("PriceActual", PriceActual);
+			log.fine("amt - PriceEntered=" + priceEntered 
+				+ " -> PriceActual=" + priceActual);
+			mTab.setValue("PriceActual", priceActual);
 		}
 		
 		/**  Discount entered - Calculate Actual/Entered
@@ -621,34 +622,46 @@ public class CalloutInvoice extends CalloutEngine
 		log.fine("amt = PriceEntered=" + PriceEntered + ", Actual" + PriceActual + ", Discount=" + Discount);
 		/* */
 
-		if (MPriceList.isCheckPriceLimit(M_PriceList_ID) && PriceLimit.doubleValue() != 0.0
-		  && PriceActual.compareTo(PriceLimit) < 0)
+		if (MPriceList.isCheckPriceLimit(priceListId) && priceLimit.doubleValue() != 0.0
+		  && priceActual.compareTo(priceLimit) < 0)
 		{
-			PriceActual = PriceLimit;
-			PriceEntered = MUOMConversion.convertProductFrom (ctx, M_Product_ID, 
-				C_UOM_To_ID, PriceLimit);
-			if (PriceEntered == null)
-				PriceEntered = PriceLimit;
-			log.fine("amt =(under) PriceEntered=" + PriceEntered + ", Actual" + PriceLimit);
-			mTab.setValue ("PriceActual", PriceLimit);
-			mTab.setValue ("PriceEntered", PriceEntered);
+			priceActual = priceLimit;
+			priceEntered = MUOMConversion.convertProductFrom (ctx, productId, 
+				uOMToId, priceLimit);
+			if (priceEntered == null)
+				priceEntered = priceLimit;
+			log.fine("amt =(under) PriceEntered=" + priceEntered + ", Actual" + priceLimit);
+			mTab.setValue ("PriceActual", priceLimit);
+			mTab.setValue ("PriceEntered", priceEntered);
 			mTab.fireDataStatusEEvent ("UnderLimitPrice", "", false);
 			//	Repeat Discount calc
-			if (PriceList.intValue() != 0)
+			if (priceList.intValue() != 0)
 			{
-				Discount = new BigDecimal ((PriceList.doubleValue () - PriceActual.doubleValue ()) / PriceList.doubleValue () * 100.0);
-				if (Discount.scale () > 2)
-					Discount = Discount.setScale (2, BigDecimal.ROUND_HALF_UP);
+				discount = new BigDecimal ((priceList.doubleValue () - priceActual.doubleValue ()) / priceList.doubleValue () * 100.0);
+				if (discount.scale () > 2)
+					discount = discount.setScale(2, RoundingMode.HALF_UP);
 			//	mTab.setValue ("Discount", Discount);
 			}
 		}
 
 		//	Line Net Amt
-		BigDecimal LineNetAmt = QtyInvoiced.multiply(PriceActual);
-		if (LineNetAmt.scale() > StdPrecision)
-			LineNetAmt = LineNetAmt.setScale(StdPrecision, BigDecimal.ROUND_HALF_UP);
-		log.info("amt = LineNetAmt=" + LineNetAmt);
-		mTab.setValue("LineNetAmt", LineNetAmt);
+		BigDecimal lineNetAmount = null;
+		if(productId != 0) {
+			MProduct product = MProduct.get(ctx, productId);
+			if(product.getC_UOM_ID() != uOMToId
+					&& priceEntered != null && !priceEntered.equals(Env.ZERO)
+					&& quantityEntered != null && !quantityEntered.equals(Env.ZERO)) {
+				lineNetAmount = quantityEntered.multiply(priceEntered);
+			}
+		}
+		//	Set default
+		if(lineNetAmount == null) {
+			lineNetAmount = quantityInvoiced.multiply(priceActual);
+		}
+		if (lineNetAmount.scale() > standardPrecision)
+			lineNetAmount = lineNetAmount.setScale(standardPrecision, RoundingMode.HALF_UP);
+		log.info("amt = LineNetAmt=" + lineNetAmount);
+		mTab.setValue("LineNetAmt", lineNetAmount);
 
 		//	Calculate Tax Amount for order
 		//boolean IsSOTrx = "Y".equals(Env.getContext(Env.getCtx(), WindowNo, "IsSOTrx"));
@@ -666,12 +679,12 @@ public class CalloutInvoice extends CalloutEngine
 				{
 					int C_Tax_ID = taxID.intValue();
 					MTax tax = new MTax (ctx, C_Tax_ID, null);
-					TaxAmt = tax.calculateTax(LineNetAmt, isTaxIncluded(WindowNo), StdPrecision);
+					TaxAmt = tax.calculateTax(lineNetAmount, isTaxIncluded(WindowNo), standardPrecision);
 					mTab.setValue("TaxAmt", TaxAmt);
 				}
 			}
 			//	Add it up
-			mTab.setValue("LineTotalAmt", LineNetAmt.add(TaxAmt));
+			mTab.setValue("LineTotalAmt", lineNetAmount.add(TaxAmt));
 		//}
 
 		return "";
@@ -732,7 +745,7 @@ public class CalloutInvoice extends CalloutEngine
 		{
 			int C_UOM_To_ID = ((Integer)value).intValue();
 			QtyEntered = (BigDecimal)mTab.getValue("QtyEntered");
-			BigDecimal QtyEntered1 = QtyEntered.setScale(MUOM.getPrecision(ctx, C_UOM_To_ID), BigDecimal.ROUND_HALF_UP);
+			BigDecimal QtyEntered1 = QtyEntered.setScale(MUOM.getPrecision(ctx, C_UOM_To_ID), RoundingMode.HALF_UP);
 			if (QtyEntered.compareTo(QtyEntered1) != 0)
 			{
 				log.fine("Corrected QtyEntered Scale UOM=" + C_UOM_To_ID 
@@ -763,7 +776,7 @@ public class CalloutInvoice extends CalloutEngine
 		{
 			int C_UOM_To_ID = Env.getContextAsInt(ctx, WindowNo, "C_UOM_ID");
 			QtyEntered = (BigDecimal)value;
-			BigDecimal QtyEntered1 = QtyEntered.setScale(MUOM.getPrecision(ctx, C_UOM_To_ID), BigDecimal.ROUND_HALF_UP);
+			BigDecimal QtyEntered1 = QtyEntered.setScale(MUOM.getPrecision(ctx, C_UOM_To_ID), RoundingMode.HALF_UP);
 			if (QtyEntered.compareTo(QtyEntered1) != 0)
 			{
 				log.fine("Corrected QtyEntered Scale UOM=" + C_UOM_To_ID 
@@ -789,7 +802,7 @@ public class CalloutInvoice extends CalloutEngine
 			int C_UOM_To_ID = Env.getContextAsInt(ctx, WindowNo, "C_UOM_ID");
 			QtyInvoiced = (BigDecimal)value;
 			int precision = MProduct.get(ctx, M_Product_ID).getUOMPrecision(); 
-			BigDecimal QtyInvoiced1 = QtyInvoiced.setScale(precision, BigDecimal.ROUND_HALF_UP);
+			BigDecimal QtyInvoiced1 = QtyInvoiced.setScale(precision, RoundingMode.HALF_UP);
 			if (QtyInvoiced.compareTo(QtyInvoiced1) != 0)
 			{
 				log.fine("Corrected QtyInvoiced Scale "
