@@ -16,6 +16,10 @@
  *****************************************************************************/
 package org.compiere.model;
 
+import org.adempiere.core.domains.models.I_C_Invoice;
+import org.adempiere.core.domains.models.I_C_Order;
+import org.adempiere.core.domains.models.I_M_AttributeSetInstance;
+import org.adempiere.core.domains.models.X_C_Order;
 import org.compiere.util.CLogger;
 import org.compiere.util.DB;
 import org.compiere.util.DisplayType;
@@ -24,6 +28,7 @@ import org.compiere.util.Ini;
 import org.compiere.util.Msg;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
@@ -209,7 +214,7 @@ public class CalloutOrder extends CalloutEngine
 						mTab.setValue("PaymentRule", s);
 					}
 					//	Payment Term
-					Integer ii =new Integer(rs.getInt(IsSOTrx ? "C_PaymentTerm_ID" : "PO_PaymentTerm_ID"));
+					Integer ii = Integer.valueOf(rs.getInt(IsSOTrx ? "C_PaymentTerm_ID" : "PO_PaymentTerm_ID"));
 					if (!rs.wasNull())
 						mTab.setValue("C_PaymentTerm_ID", ii);
 					//	InvoiceRule
@@ -276,11 +281,14 @@ public class CalloutOrder extends CalloutEngine
 			+ " lship.C_BPartner_Location_ID,c.AD_User_ID,"
 			+ " COALESCE(p.PO_PriceList_ID,g.PO_PriceList_ID) AS PO_PriceList_ID, p.PaymentRulePO,p.PO_PaymentTerm_ID," 
 			+ " lbill.C_BPartner_Location_ID AS Bill_Location_ID, p.SOCreditStatus, "
-			+ " p.SalesRep_ID "
+			+ " COALESCE(p.SalesRep_ID, sr.SalesRep_ID) AS SalesRep_ID, "
+			+ " COALESCE(sr.C_SalesRegion_ID, bsr.C_SalesRegion_ID) AS C_SalesRegion_ID "
 			+ "FROM C_BPartner p"
 			+ " INNER JOIN C_BP_Group g ON (p.C_BP_Group_ID=g.C_BP_Group_ID)"			
 			+ " LEFT OUTER JOIN C_BPartner_Location lbill ON (p.C_BPartner_ID=lbill.C_BPartner_ID AND lbill.IsBillTo='Y' AND lbill.IsActive='Y')"
+			+ " LEFT JOIN C_SalesRegion bsr ON(bsr.C_SalesRegion_ID = lbill.C_SalesRegion_ID)"
 			+ " LEFT OUTER JOIN C_BPartner_Location lship ON (p.C_BPartner_ID=lship.C_BPartner_ID AND lship.IsShipTo='Y' AND lship.IsActive='Y')"
+			+ " LEFT JOIN C_SalesRegion sr ON(sr.C_SalesRegion_ID = lship.C_SalesRegion_ID)"
 			+ " LEFT OUTER JOIN AD_User c ON (p.C_BPartner_ID=c.C_BPartner_ID) "
 			+ "WHERE p.C_BPartner_ID=? AND p.IsActive='Y'";		//	#1
 
@@ -300,16 +308,20 @@ public class CalloutOrder extends CalloutEngine
 				{
 					mTab.setValue("SalesRep_ID", salesRep);
 				}
-				
+				int salesRegionId = rs.getInt("C_SalesRegion_ID");
+				//	Validate and set
+				if(IsSOTrx && salesRegionId != 0) {
+					mTab.setValue("C_SalesRegion_ID", salesRegionId);
+				}
 				//	PriceList (indirect: IsTaxIncluded & Currency)
-				Integer ii = new Integer(rs.getInt(IsSOTrx ? "M_PriceList_ID" : "PO_PriceList_ID"));
+				Integer ii = Integer.valueOf(rs.getInt(IsSOTrx ? "M_PriceList_ID" : "PO_PriceList_ID"));
 				if (!rs.wasNull())
 					mTab.setValue("M_PriceList_ID", ii);
 				else
 				{	//	get default PriceList
 					int i = Env.getContextAsInt(ctx, "#M_PriceList_ID");
 					if (i != 0)
-						mTab.setValue("M_PriceList_ID", new Integer(i));
+						mTab.setValue("M_PriceList_ID", Integer.valueOf(i));
 				}
 
 				//	Bill-To
@@ -318,7 +330,7 @@ public class CalloutOrder extends CalloutEngine
 				if (bill_Location_ID == 0)
 					mTab.setValue("Bill_Location_ID", null);
 				else
-					mTab.setValue("Bill_Location_ID", new Integer(bill_Location_ID));
+					mTab.setValue("Bill_Location_ID", Integer.valueOf(bill_Location_ID));
 				// Ship-To Location
 				int shipTo_ID = rs.getInt("C_BPartner_Location_ID");
 				//	overwritten by InfoBP selection - works only if InfoWindow
@@ -332,7 +344,7 @@ public class CalloutOrder extends CalloutEngine
 				if (shipTo_ID == 0)
 					mTab.setValue("C_BPartner_Location_ID", null);
 				else
-					mTab.setValue("C_BPartner_Location_ID", new Integer(shipTo_ID));
+					mTab.setValue("C_BPartner_Location_ID", Integer.valueOf(shipTo_ID));
 
 				//	Contact - overwritten by InfoBP selection
 				int contID = rs.getInt("AD_User_ID");
@@ -346,8 +358,8 @@ public class CalloutOrder extends CalloutEngine
 					mTab.setValue("AD_User_ID", null);
 				else
 				{
-					mTab.setValue("AD_User_ID", new Integer(contID));
-					mTab.setValue("Bill_User_ID", new Integer(contID));
+					mTab.setValue("AD_User_ID", Integer.valueOf(contID));
+					mTab.setValue("Bill_User_ID", Integer.valueOf(contID));
 				}
 
 				//	CreditAvailable 
@@ -410,7 +422,7 @@ public class CalloutOrder extends CalloutEngine
 						mTab.setValue("PaymentRule", s);
 					}
 					//	Payment Term
-					ii = new Integer(rs.getInt(IsSOTrx ? "C_PaymentTerm_ID" : "PO_PaymentTerm_ID"));
+					ii = Integer.valueOf(rs.getInt(IsSOTrx ? "C_PaymentTerm_ID" : "PO_PaymentTerm_ID"));
 					if (!rs.wasNull())
 						mTab.setValue("C_PaymentTerm_ID", ii);
 					//	InvoiceRule
@@ -494,14 +506,14 @@ public class CalloutOrder extends CalloutEngine
 			if (rs.next())
 			{
 				//	PriceList (indirect: IsTaxIncluded & Currency)
-				Integer ii = new Integer(rs.getInt(IsSOTrx ? "M_PriceList_ID" : "PO_PriceList_ID"));
+				Integer ii = Integer.valueOf(rs.getInt(IsSOTrx ? "M_PriceList_ID" : "PO_PriceList_ID"));
 				if (!rs.wasNull())
 					mTab.setValue("M_PriceList_ID", ii);
 				else
 				{	//	get default PriceList
 					int i = Env.getContextAsInt(ctx, "#M_PriceList_ID");
 					if (i != 0)
-						mTab.setValue("M_PriceList_ID", new Integer(i));
+						mTab.setValue("M_PriceList_ID", Integer.valueOf(i));
 				}
 
 				int bill_Location_ID = rs.getInt("Bill_Location_ID");
@@ -516,7 +528,7 @@ public class CalloutOrder extends CalloutEngine
 				if (bill_Location_ID == 0)
 					mTab.setValue("Bill_Location_ID", null);
 				else
-					mTab.setValue("Bill_Location_ID", new Integer(bill_Location_ID));
+					mTab.setValue("Bill_Location_ID", Integer.valueOf(bill_Location_ID));
 
 				//	Contact - overwritten by InfoBP selection
 				int contID = rs.getInt("AD_User_ID");
@@ -529,7 +541,7 @@ public class CalloutOrder extends CalloutEngine
 				if (contID == 0)
 					mTab.setValue("Bill_User_ID", null);
 				else
-					mTab.setValue("Bill_User_ID", new Integer(contID));
+					mTab.setValue("Bill_User_ID", Integer.valueOf(contID));
 
 				//	CreditAvailable 
 				if (IsSOTrx)
@@ -583,7 +595,7 @@ public class CalloutOrder extends CalloutEngine
 						mTab.setValue("PaymentRule", s);
 					}
 					//	Payment Term
-					ii = new Integer(rs.getInt(IsSOTrx ? "C_PaymentTerm_ID" : "PO_PaymentTerm_ID"));
+					ii = Integer.valueOf(rs.getInt(IsSOTrx ? "C_PaymentTerm_ID" : "PO_PaymentTerm_ID"));
 					if (!rs.wasNull())
 						mTab.setValue("C_PaymentTerm_ID", ii);
 					//	InvoiceRule
@@ -655,9 +667,9 @@ public class CalloutOrder extends CalloutEngine
 			if (rs.next())
 			{
 				//	Tax Included
-				mTab.setValue("IsTaxIncluded", new Boolean("Y".equals(rs.getString(1))));
+				mTab.setValue("IsTaxIncluded", Boolean.valueOf("Y".equals(rs.getString(1))));
 				//	Currency
-				Integer ii = new Integer(rs.getInt(3));
+				Integer ii = Integer.valueOf(rs.getInt(3));
 				mTab.setValue("C_Currency_ID", ii);
 				//	PriceList Version
 				Env.setContext(ctx, WindowNo, "M_PriceList_Version_ID", rs.getInt(5));
@@ -758,9 +770,9 @@ public class CalloutOrder extends CalloutEngine
 		mTab.setValue("PriceLimit", pp.getPriceLimit());
 		mTab.setValue("PriceActual", pp.getPriceStd());
 		mTab.setValue("PriceEntered", pp.getPriceStd());
-		mTab.setValue("C_Currency_ID", new Integer(pp.getC_Currency_ID()));
+		mTab.setValue("C_Currency_ID", Integer.valueOf(pp.getC_Currency_ID()));
 		mTab.setValue("Discount", pp.getDiscount());
-		mTab.setValue("C_UOM_ID", new Integer(pp.getC_UOM_ID()));
+		mTab.setValue("C_UOM_ID", Integer.valueOf(pp.getC_UOM_ID()));
 		mTab.setValue("QtyOrdered", mTab.getValue("QtyEntered"));
 		Env.setContext(ctx, WindowNo, "DiscountSchema", pp.isDiscountSchema() ? "Y" : "N");
 		
@@ -769,7 +781,7 @@ public class CalloutOrder extends CalloutEngine
 		//	Integer wh = (Integer)mTab.getValue("M_Warehouse_ID");
 		//	if (wh.intValue() != M_Warehouse_ID)
 		//	{
-		//		mTab.setValue("M_Warehouse_ID", new Integer(M_Warehouse_ID));
+		//		mTab.setValue("M_Warehouse_ID", Integer.valueOf(M_Warehouse_ID));
 		//		ADialog.warn(,WindowNo, "WarehouseChanged");
 		//	}
 
@@ -793,7 +805,7 @@ public class CalloutOrder extends CalloutEngine
 				{
 					Integer C_OrderLine_ID = (Integer)mTab.getValue("C_OrderLine_ID");
 					if (C_OrderLine_ID == null)
-						C_OrderLine_ID = new Integer(0);
+						C_OrderLine_ID = Integer.valueOf(0);
 					BigDecimal notReserved = MOrderLine.getNotReserved(ctx, 
 						M_Warehouse_ID, M_Product_ID, M_AttributeSetInstance_ID,
 						C_OrderLine_ID.intValue());
@@ -840,7 +852,7 @@ public class CalloutOrder extends CalloutEngine
 		}
 		mTab.setValue("M_AttributeSetInstance_ID", null);
 		mTab.setValue("S_ResourceAssignment_ID", null);
-		mTab.setValue("C_UOM_ID", new Integer(100));	//	EA
+		mTab.setValue("C_UOM_ID", Integer.valueOf(100));	//	EA
 		
 		Env.setContext(ctx, WindowNo, "DiscountSchema", "N");
 		String sql = "SELECT ChargeAmt FROM C_Charge WHERE C_Charge_ID=?";
@@ -947,7 +959,7 @@ public class CalloutOrder extends CalloutEngine
 		if (C_Tax_ID == 0)
 			mTab.fireDataStatusEEvent(CLogger.retrieveError());
 		else
-			mTab.setValue("C_Tax_ID", new Integer(C_Tax_ID));
+			mTab.setValue("C_Tax_ID", Integer.valueOf(C_Tax_ID));
 		//
 		if (steps) log.warning("fini");
 		return amt(ctx, WindowNo, mTab, mField, value);
@@ -973,37 +985,37 @@ public class CalloutOrder extends CalloutEngine
 			return "";
 
 		if (steps) log.warning("init");
-		int C_UOM_To_ID = Env.getContextAsInt(ctx, WindowNo, "C_UOM_ID");
-		int M_Product_ID = Env.getContextAsInt(ctx, WindowNo, "M_Product_ID");
-		int M_PriceList_ID = Env.getContextAsInt(ctx, WindowNo, "M_PriceList_ID");
-		int StdPrecision = MPriceList.getStandardPrecision(ctx, M_PriceList_ID);
-		BigDecimal QtyEntered, QtyOrdered, PriceEntered, PriceActual, PriceLimit, Discount, PriceList;
+		int uOMToId = Env.getContextAsInt(ctx, WindowNo, "C_UOM_ID");
+		int productId = Env.getContextAsInt(ctx, WindowNo, "M_Product_ID");
+		int priceListId = Env.getContextAsInt(ctx, WindowNo, "M_PriceList_ID");
+		int standardPrecision = MPriceList.getStandardPrecision(ctx, priceListId);
+		BigDecimal quantityEntered, quantityOrdered, priceEntered, priceActual, priceLimit, discount, priceList;
 		//	get values
-		QtyEntered = (BigDecimal)mTab.getValue("QtyEntered");
-		QtyOrdered = (BigDecimal)mTab.getValue("QtyOrdered");
-		log.fine("QtyEntered=" + QtyEntered + ", Ordered=" + QtyOrdered + ", UOM=" + C_UOM_To_ID);
+		quantityEntered = (BigDecimal)mTab.getValue("QtyEntered");
+		quantityOrdered = (BigDecimal)mTab.getValue("QtyOrdered");
+		log.fine("QtyEntered=" + quantityEntered + ", Ordered=" + quantityOrdered + ", UOM=" + uOMToId);
 		//
-		PriceEntered = (BigDecimal)mTab.getValue("PriceEntered");
-		PriceActual = (BigDecimal)mTab.getValue("PriceActual");
-		Discount = (BigDecimal)mTab.getValue("Discount");
-		PriceLimit = (BigDecimal)mTab.getValue("PriceLimit");
-		PriceList = (BigDecimal)mTab.getValue("PriceList");
-		log.fine("PriceList=" + PriceList + ", Limit=" + PriceLimit + ", Precision=" + StdPrecision);
-		log.fine("PriceEntered=" + PriceEntered + ", Actual=" + PriceActual + ", Discount=" + Discount);
+		priceEntered = (BigDecimal)mTab.getValue("PriceEntered");
+		priceActual = (BigDecimal)mTab.getValue("PriceActual");
+		discount = (BigDecimal)mTab.getValue("Discount");
+		priceLimit = (BigDecimal)mTab.getValue("PriceLimit");
+		priceList = (BigDecimal)mTab.getValue("PriceList");
+		log.fine("PriceList=" + priceList + ", Limit=" + priceLimit + ", Precision=" + standardPrecision);
+		log.fine("PriceEntered=" + priceEntered + ", Actual=" + priceActual + ", Discount=" + discount);
 
 		//		No Product
-		if (M_Product_ID == 0)
+		if (productId == 0)
 		{
 			// if price change sync price actual and entered
 			// else ignore
 			if (mField.getColumnName().equals("PriceActual"))
 			{
-				PriceEntered = (BigDecimal) value;
+				priceEntered = (BigDecimal) value;
 				mTab.setValue("PriceEntered", value);
 			}
 			else if (mField.getColumnName().equals("PriceEntered"))
 			{
-				PriceActual = (BigDecimal) value;
+				priceActual = (BigDecimal) value;
 				mTab.setValue("PriceActual", value);
 			}
 		}
@@ -1016,112 +1028,124 @@ public class CalloutOrder extends CalloutEngine
 		{
 			int C_BPartner_ID = Env.getContextAsInt(ctx, WindowNo, "C_BPartner_ID");
 			if (mField.getColumnName().equals("QtyEntered"))
-				QtyOrdered = MUOMConversion.convertProductFrom (ctx, M_Product_ID, 
-					C_UOM_To_ID, QtyEntered);
-			if (QtyOrdered == null)
-				QtyOrdered = QtyEntered;
+				quantityOrdered = MUOMConversion.convertProductFrom (ctx, productId, 
+					uOMToId, quantityEntered);
+			if (quantityOrdered == null)
+				quantityOrdered = quantityEntered;
 			boolean IsSOTrx = Env.getContext(ctx, WindowNo, "IsSOTrx").equals("Y");
-			MProductPricing pp = new MProductPricing (M_Product_ID, C_BPartner_ID, QtyOrdered, IsSOTrx, null);
-			pp.setM_PriceList_ID(M_PriceList_ID);
-			int M_PriceList_Version_ID = Env.getContextAsInt(ctx, WindowNo, "M_PriceList_Version_ID");
-			pp.setM_PriceList_Version_ID(M_PriceList_Version_ID);
+			MProductPricing pp = new MProductPricing (productId, C_BPartner_ID, quantityOrdered, IsSOTrx, null);
+			pp.setM_PriceList_ID(priceListId);
+			int priceListVersionId = Env.getContextAsInt(ctx, WindowNo, "M_PriceList_Version_ID");
+			pp.setM_PriceList_Version_ID(priceListVersionId);
 			Timestamp date = (Timestamp)mTab.getValue("DateOrdered");
 			pp.setPriceDate(date);
 			//
-			PriceEntered = MUOMConversion.convertProductFrom (ctx, M_Product_ID, 
-				C_UOM_To_ID, pp.getPriceStd());
-			if (PriceEntered == null)
-				PriceEntered = pp.getPriceStd();
+			priceEntered = MUOMConversion.convertProductFrom (ctx, productId, 
+				uOMToId, pp.getPriceStd());
+			if (priceEntered == null)
+				priceEntered = pp.getPriceStd();
 			//
 			log.fine("QtyChanged -> PriceActual=" + pp.getPriceStd() 
-				+ ", PriceEntered=" + PriceEntered + ", Discount=" + pp.getDiscount());
-			PriceActual = pp.getPriceStd();
+				+ ", PriceEntered=" + priceEntered + ", Discount=" + pp.getDiscount());
+			priceActual = pp.getPriceStd();
 			mTab.setValue("PriceActual", pp.getPriceStd());
 			mTab.setValue("Discount", pp.getDiscount());
-			mTab.setValue("PriceEntered", PriceEntered);
+			mTab.setValue("PriceEntered", priceEntered);
 			Env.setContext(ctx, WindowNo, "DiscountSchema", pp.isDiscountSchema() ? "Y" : "N");
 		}
 		else if (mField.getColumnName().equals("PriceActual"))
 		{
-			PriceActual = (BigDecimal)value;
-			PriceEntered = MUOMConversion.convertProductFrom (ctx, M_Product_ID, 
-				C_UOM_To_ID, PriceActual);
-			if (PriceEntered == null)
-				PriceEntered = PriceActual;
+			priceActual = (BigDecimal)value;
+			priceEntered = MUOMConversion.convertProductFrom (ctx, productId, 
+				uOMToId, priceActual);
+			if (priceEntered == null)
+				priceEntered = priceActual;
 			//
-			log.fine("PriceActual=" + PriceActual 
-				+ " -> PriceEntered=" + PriceEntered);
-			mTab.setValue("PriceEntered", PriceEntered);
+			log.fine("PriceActual=" + priceActual 
+				+ " -> PriceEntered=" + priceEntered);
+			mTab.setValue("PriceEntered", priceEntered);
 		}
 		else if (mField.getColumnName().equals("PriceEntered"))
 		{
-			PriceEntered = (BigDecimal)value;
-			PriceActual = MUOMConversion.convertProductTo (ctx, M_Product_ID, 
-				C_UOM_To_ID, PriceEntered);
-			if (PriceActual == null)
-				PriceActual = PriceEntered;
+			priceEntered = (BigDecimal)value;
+			priceActual = MUOMConversion.convertProductTo (ctx, productId, 
+				uOMToId, priceEntered);
+			if (priceActual == null)
+				priceActual = priceEntered;
 			//
-			log.fine("PriceEntered=" + PriceEntered 
-				+ " -> PriceActual=" + PriceActual);
-			mTab.setValue("PriceActual", PriceActual);
+			log.fine("PriceEntered=" + priceEntered 
+				+ " -> PriceActual=" + priceActual);
+			mTab.setValue("PriceActual", priceActual);
 		}
 		
 		//  Discount entered - Calculate Actual/Entered
 		if (mField.getColumnName().equals("Discount"))
 		{
-			if ( PriceList.doubleValue() != 0 )
-				PriceActual = new BigDecimal ((100.0 - Discount.doubleValue()) / 100.0 * PriceList.doubleValue());
-			if (PriceActual.scale() > StdPrecision)
-				PriceActual = PriceActual.setScale(StdPrecision, BigDecimal.ROUND_HALF_UP);
-			PriceEntered = MUOMConversion.convertProductFrom (ctx, M_Product_ID, 
-				C_UOM_To_ID, PriceActual);
-			if (PriceEntered == null)
-				PriceEntered = PriceActual;
-			mTab.setValue("PriceActual", PriceActual);
-			mTab.setValue("PriceEntered", PriceEntered);
+			if ( priceList.doubleValue() != 0 )
+				priceActual = new BigDecimal ((100.0 - discount.doubleValue()) / 100.0 * priceList.doubleValue());
+			if (priceActual.scale() > standardPrecision)
+				priceActual = priceActual.setScale(standardPrecision, RoundingMode.HALF_UP);
+			priceEntered = MUOMConversion.convertProductFrom (ctx, productId, 
+				uOMToId, priceActual);
+			if (priceEntered == null)
+				priceEntered = priceActual;
+			mTab.setValue("PriceActual", priceActual);
+			mTab.setValue("PriceEntered", priceEntered);
 		}
 		//	calculate Discount
 		else
 		{
-			if (PriceList.intValue() == 0)
-				Discount = Env.ZERO;
+			if (priceList.intValue() == 0)
+				discount = Env.ZERO;
 			else
-				Discount = new BigDecimal ((PriceList.doubleValue() - PriceActual.doubleValue()) / PriceList.doubleValue() * 100.0);
-			if (Discount.scale() > 2)
-				Discount = Discount.setScale(2, BigDecimal.ROUND_HALF_UP);
-			mTab.setValue("Discount", Discount);
+				discount = new BigDecimal ((priceList.doubleValue() - priceActual.doubleValue()) / priceList.doubleValue() * 100.0);
+			if (discount.scale() > 2)
+				discount = discount.setScale(2, RoundingMode.HALF_UP);
+			mTab.setValue("Discount", discount);
 		}
-		log.fine("PriceEntered=" + PriceEntered + ", Actual=" + PriceActual + ", Discount=" + Discount);
+		log.fine("PriceEntered=" + priceEntered + ", Actual=" + priceActual + ", Discount=" + discount);
 
 		//	Check Price Limit?
-		if (MPriceList.isCheckPriceLimit(M_PriceList_ID) && PriceLimit.doubleValue() != 0.0
-		  && PriceActual.compareTo(PriceLimit) < 0)
+		if (MPriceList.isCheckPriceLimit(priceListId) && priceLimit.doubleValue() != 0.0
+		  && priceActual.compareTo(priceLimit) < 0)
 		{
-			PriceActual = PriceLimit;
-			PriceEntered = MUOMConversion.convertProductFrom (ctx, M_Product_ID, 
-				C_UOM_To_ID, PriceLimit);
-			if (PriceEntered == null)
-				PriceEntered = PriceLimit;
-			log.fine("(under) PriceEntered=" + PriceEntered + ", Actual" + PriceLimit);
-			mTab.setValue ("PriceActual", PriceLimit);
-			mTab.setValue ("PriceEntered", PriceEntered);
+			priceActual = priceLimit;
+			priceEntered = MUOMConversion.convertProductFrom (ctx, productId, 
+				uOMToId, priceLimit);
+			if (priceEntered == null)
+				priceEntered = priceLimit;
+			log.fine("(under) PriceEntered=" + priceEntered + ", Actual" + priceLimit);
+			mTab.setValue ("PriceActual", priceLimit);
+			mTab.setValue ("PriceEntered", priceEntered);
 			mTab.fireDataStatusEEvent ("UnderLimitPrice", "", false);
 			//	Repeat Discount calc
-			if (PriceList.intValue() != 0)
+			if (priceList.intValue() != 0)
 			{
-				Discount = new BigDecimal ((PriceList.doubleValue () - PriceActual.doubleValue ()) / PriceList.doubleValue () * 100.0);
-				if (Discount.scale () > 2)
-					Discount = Discount.setScale (2, BigDecimal.ROUND_HALF_UP);
-				mTab.setValue ("Discount", Discount);
+				discount = new BigDecimal ((priceList.doubleValue () - priceActual.doubleValue ()) / priceList.doubleValue () * 100.0);
+				if (discount.scale () > 2)
+					discount = discount.setScale (2, RoundingMode.HALF_UP);
+				mTab.setValue ("Discount", discount);
 			}
 		}
 
 		//	Line Net Amt
-		BigDecimal LineNetAmt = QtyOrdered.multiply(PriceActual);
-		if (LineNetAmt.scale() > StdPrecision)
-			LineNetAmt = LineNetAmt.setScale(StdPrecision, BigDecimal.ROUND_HALF_UP);
-		log.info("LineNetAmt=" + LineNetAmt);
-		mTab.setValue("LineNetAmt", LineNetAmt);
+		BigDecimal lineNetAmount = null;
+		if(productId != 0) {
+			MProduct product = MProduct.get(ctx, productId);
+			if(product.getC_UOM_ID() != uOMToId
+					&& priceEntered != null && !priceEntered.equals(Env.ZERO)
+					&& quantityEntered != null && !quantityEntered.equals(Env.ZERO)) {
+				lineNetAmount = quantityEntered.multiply(priceEntered);
+			}
+		}
+		//	Set default
+		if(lineNetAmount == null) {
+			lineNetAmount = quantityOrdered.multiply(priceActual);
+		}
+		if (lineNetAmount.scale() > standardPrecision)
+			lineNetAmount = lineNetAmount.setScale(standardPrecision, RoundingMode.HALF_UP);
+		log.info("LineNetAmt=" + lineNetAmount);
+		mTab.setValue("LineNetAmt", lineNetAmount);
 		//
 		return "";
 	}	//	amt
@@ -1158,7 +1182,7 @@ public class CalloutOrder extends CalloutEngine
 		{
 			int C_UOM_To_ID = ((Integer)value).intValue();
 			QtyEntered = (BigDecimal)mTab.getValue("QtyEntered");
-			BigDecimal QtyEntered1 = QtyEntered.setScale(MUOM.getPrecision(ctx, C_UOM_To_ID), BigDecimal.ROUND_HALF_UP);
+			BigDecimal QtyEntered1 = QtyEntered.setScale(MUOM.getPrecision(ctx, C_UOM_To_ID), RoundingMode.HALF_UP);
 			if (QtyEntered.compareTo(QtyEntered1) != 0)
 			{
 				log.fine("Corrected QtyEntered Scale UOM=" + C_UOM_To_ID 
@@ -1189,7 +1213,7 @@ public class CalloutOrder extends CalloutEngine
 		{
 			int C_UOM_To_ID = Env.getContextAsInt(ctx, WindowNo, "C_UOM_ID");
 			QtyEntered = (BigDecimal)value;
-			BigDecimal QtyEntered1 = QtyEntered.setScale(MUOM.getPrecision(ctx, C_UOM_To_ID), BigDecimal.ROUND_HALF_UP);
+			BigDecimal QtyEntered1 = QtyEntered.setScale(MUOM.getPrecision(ctx, C_UOM_To_ID), RoundingMode.HALF_UP);
 			if (QtyEntered.compareTo(QtyEntered1) != 0)
 			{
 				log.fine("Corrected QtyEntered Scale UOM=" + C_UOM_To_ID 
@@ -1215,7 +1239,7 @@ public class CalloutOrder extends CalloutEngine
 			int C_UOM_To_ID = Env.getContextAsInt(ctx, WindowNo, "C_UOM_ID");
 			QtyOrdered = (BigDecimal)value;
 			int precision = MProduct.get(ctx, M_Product_ID).getUOMPrecision(); 
-			BigDecimal QtyOrdered1 = QtyOrdered.setScale(precision, BigDecimal.ROUND_HALF_UP);
+			BigDecimal QtyOrdered1 = QtyOrdered.setScale(precision, RoundingMode.HALF_UP);
 			if (QtyOrdered.compareTo(QtyOrdered1) != 0)
 			{
 				log.fine("Corrected QtyOrdered Scale " 
@@ -1263,7 +1287,7 @@ public class CalloutOrder extends CalloutEngine
 				{
 					Integer C_OrderLine_ID = (Integer)mTab.getValue("C_OrderLine_ID");
 					if (C_OrderLine_ID == null)
-						C_OrderLine_ID = new Integer(0);
+						C_OrderLine_ID = Integer.valueOf(0);
 					BigDecimal notReserved = MOrderLine.getNotReserved(ctx, 
 						M_Warehouse_ID, M_Product_ID, M_AttributeSetInstance_ID,
 						C_OrderLine_ID.intValue());
