@@ -21,6 +21,7 @@ import java.sql.ResultSet;
 import java.sql.Timestamp;
 import java.util.Properties;
 
+import org.adempiere.core.domains.models.X_T_Aging;
 import org.compiere.util.Env;
 
 /**
@@ -116,9 +117,9 @@ public class MAging extends X_T_Aging
 
 		//	Optional
 	//	setC_Invoice_ID (C_Invoice_ID);		// may be zero
-		set_ValueNoCheck ("C_Invoice_ID", new Integer(C_Invoice_ID));
+		set_ValueNoCheck("C_Invoice_ID", Integer.valueOf(C_Invoice_ID));
 	//	setC_InvoicePaySchedule_ID(C_InvoicePaySchedule_ID);	//	may be zero
-		set_Value ("C_InvoicePaySchedule_ID", new Integer(C_InvoicePaySchedule_ID));
+		set_Value("C_InvoicePaySchedule_ID", Integer.valueOf(C_InvoicePaySchedule_ID));
 		setIsListInvoices(C_Invoice_ID != 0);
 		//
 		setDueDate(DueDate);		//	only sensible if List invoices
@@ -185,9 +186,9 @@ public class MAging extends X_T_Aging
 
 		//	Optional
 	//	setC_Invoice_ID (C_Invoice_ID);		// may be zero
-		set_ValueNoCheck ("C_Invoice_ID", new Integer(C_Invoice_ID));
+		set_ValueNoCheck("C_Invoice_ID", Integer.valueOf(C_Invoice_ID));
 	//	setC_InvoicePaySchedule_ID(C_InvoicePaySchedule_ID);	//	may be zero
-		set_Value ("C_InvoicePaySchedule_ID", new Integer(C_InvoicePaySchedule_ID));
+		set_Value("C_InvoicePaySchedule_ID", Integer.valueOf(C_InvoicePaySchedule_ID));
 		setIsListInvoices(C_Invoice_ID != 0);
 		//
 		setDueDate(DueDate);		//	only sensible if List invoices
@@ -249,6 +250,12 @@ public class MAging extends X_T_Aging
 			if (daysDue <= -1 && daysDue >= -7)
 				setDue1_7 (getDue1_7().add(amt));
 				
+			if (daysDue <= -8 && daysDue >= -14)
+				setDue8_14(getDue8_14().add(amt));
+			
+			if (daysDue <= -15 && daysDue >= -30)
+				setDue15_30(getDue15_30().add(amt));
+			
 			if (daysDue <= -8 && daysDue >= -30)
 				setDue8_30 (getDue8_30().add(amt));
 				
@@ -275,7 +282,13 @@ public class MAging extends X_T_Aging
 				
 			if (daysDue <= 30)
 				setPastDue1_30 (getPastDue1_30().add(amt));
-				
+			
+			if (daysDue >= 8 && daysDue <= 14)
+				setPastDue8_14(getPastDue8_14().add(amt));
+			
+			if (daysDue >= 15 && daysDue <= 30)
+				setPastDue15_30 (getPastDue15_30().add(amt));
+			
 			if (daysDue >= 8 && daysDue <= 30)
 				setPastDue8_30 (getPastDue8_30().add(amt));
 			
@@ -293,6 +306,14 @@ public class MAging extends X_T_Aging
 				
 			if (daysDue >= 91)
 				setPastDue91_Plus (getPastDue91_Plus().add(amt));
+			if (daysDue >= 91 && daysDue <= 120)
+				setPastDue90_120(getPastDue90_120().add(amt));
+			if (daysDue >= 121 && daysDue <= 180)
+				setPastDue120_180(getPastDue120_180().add(amt));
+			if (daysDue >= 181 && daysDue <= 360)
+				setPastDue180_360(getPastDue180_360().add(amt));
+			if (daysDue >= 361)
+				setPastDue360_Plus(getPastDue360_Plus().add(amt));
 		}
 	}	//	add
 
