@@ -94,7 +94,7 @@ public final class MLookup extends Lookup implements Serializable
 	/** Number of max rows to load	*/
 	private static final int	MAX_ROWS = 10000;
 	/**	Indicator for Null			*/
-	private static Integer 		MINUS_ONE = new Integer(-1);
+	private static Integer 		MINUS_ONE = Integer.valueOf(-1);
 
 
 	/** The Lookup Info Value Object        */
@@ -479,7 +479,7 @@ public final class MLookup extends Lookup implements Serializable
 					int keyValue = rs.getInt(1);
 					KeyNamePair p = new KeyNamePair(keyValue, name);
 					if (saveInCache)		//	save if
-						m_lookup.put(new Integer(keyValue), p);
+						m_lookup.put(Integer.valueOf(keyValue), p);
 					directValue = p;
 				}
 				else
@@ -772,7 +772,7 @@ public final class MLookup extends Lookup implements Serializable
 					{
 						int key = rs.getInt(1);
 						KeyNamePair p = new KeyNamePair(key, name);
-						m_lookup.put(new Integer(key), p);
+						m_lookup.put(Integer.valueOf(key), p);
 					}
 					else
 					{
