@@ -17,12 +17,14 @@
 package org.compiere.model;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.Timestamp;
 import java.util.Properties;
 import java.util.logging.Level;
 
+import org.adempiere.core.domains.models.X_C_OrderLine;
 import org.adempiere.engine.IDocumentLine;
 import org.adempiere.exceptions.ProductNotOnPriceListException;
 import org.compiere.util.CLogger;
@@ -243,7 +245,7 @@ public class MOrderLine extends X_C_OrderLine implements IDocumentLine
 	public void setHeaderInfo (MOrder order)
 	{
 		m_parent = order;
-		m_precision = new Integer(order.getPrecision());
+		m_precision = Integer.valueOf(order.getPrecision());
 		m_M_PriceList_ID = order.getM_PriceList_ID();
 		m_IsSOTrx = order.isSOTrx();
 	}	//	setHeaderInfo
@@ -315,7 +317,7 @@ public class MOrderLine extends X_C_OrderLine implements IDocumentLine
 			setPriceEntered(getPriceActual());
 		else
 			setPriceEntered(getPriceActual().multiply(getQtyOrdered()
-				.divide(getQtyEntered(), 12, BigDecimal.ROUND_HALF_UP)));	//	recision
+				.divide(getQtyEntered(), 12, RoundingMode.HALF_UP)));	//	recision
 		
 		//	Calculate Discount
 		setDiscount(m_productPrice.getDiscount());
@@ -334,7 +336,7 @@ public class MOrderLine extends X_C_OrderLine implements IDocumentLine
 	private MProductPricing getProductPricing (int M_PriceList_ID)
 	{
 		m_productPrice = new MProductPricing (getM_Product_ID(), 
-			getC_BPartner_ID(), getQtyOrdered(), m_IsSOTrx, null);
+			getC_BPartner_ID(), getQtyOrdered(), m_IsSOTrx, get_TrxName());
 		m_productPrice.setM_PriceList_ID(M_PriceList_ID);
 		m_productPrice.setPriceDate(getDateOrdered());
 		//
@@ -365,10 +367,21 @@ public class MOrderLine extends X_C_OrderLine implements IDocumentLine
 	 * 	Calculate Extended Amt.
 	 * 	May or may not include tax
 	 */
-	public void setLineNetAmt ()
-	{
-		BigDecimal bd = getPriceActual().multiply(getQtyOrdered()); 
-		
+	public void setLineNetAmt () {
+		//	Line Net Amt
+		BigDecimal lineNetAmount = null;
+		if(getM_Product_ID() != 0) {
+			MProduct product = MProduct.get(getCtx(), getM_Product_ID(), get_TrxName());
+			if(product.getC_UOM_ID() != getC_UOM_ID()
+					&& getPriceEntered() != null && !getPriceEntered().equals(Env.ZERO)
+					&& getQtyEntered() != null && !getQtyEntered().equals(Env.ZERO)) {
+				lineNetAmount = getQtyEntered().multiply(getPriceEntered());
+			}
+		}
+		//	Set default
+		if(lineNetAmount == null) {
+			lineNetAmount = getPriceActual().multiply(getQtyOrdered());
+		}
 		boolean documentLevel = getTax().isDocumentLevel();
 		
 		//	juddm: Tax Exempt & Tax Included in Price List & not Document Level - Adjust Line Amount
@@ -400,20 +413,20 @@ public class MOrderLine extends X_C_OrderLine implements IDocumentLine
 				log.fine("stdTax rate is " + stdTax.getRate());
 				log.fine("orderTax rate is " + orderTax.getRate());
 				
-				taxThisAmt = taxThisAmt.add(orderTax.calculateTax(bd, isTaxIncluded(), getPrecision()));
-				taxStdAmt = taxStdAmt.add(stdTax.calculateTax(bd, isTaxIncluded(), getPrecision()));
+				taxThisAmt = taxThisAmt.add(orderTax.calculateTax(lineNetAmount, isTaxIncluded(), getPrecision()));
+				taxStdAmt = taxStdAmt.add(stdTax.calculateTax(lineNetAmount, isTaxIncluded(), getPrecision()));
 				
-				bd = bd.subtract(taxStdAmt).add(taxThisAmt);
+				lineNetAmount = lineNetAmount.subtract(taxStdAmt).add(taxThisAmt);
 				
 				log.fine("Price List includes Tax and Tax Changed on Order Line: New Tax Amt: " 
-						+ taxThisAmt + " Standard Tax Amt: " + taxStdAmt + " Line Net Amt: " + bd);	
+						+ taxThisAmt + " Standard Tax Amt: " + taxStdAmt + " Line Net Amt: " + lineNetAmount);	
 			}
 			
 		}
 		
-		if (bd.scale() > getPrecision())
-			bd = bd.setScale(getPrecision(), BigDecimal.ROUND_HALF_UP);
-		super.setLineNetAmt (bd);
+		if (lineNetAmount.scale() > getPrecision())
+			lineNetAmount = lineNetAmount.setScale(getPrecision(), RoundingMode.HALF_UP);
+		super.setLineNetAmt (lineNetAmount);
 	}	//	setLineNetAmt
 	
 	/**
@@ -457,7 +470,7 @@ public class MOrderLine extends X_C_OrderLine implements IDocumentLine
 			MCurrency cur = MCurrency.get(getCtx(), getC_Currency_ID());
 			if (cur.get_ID() != 0)
 			{
-				m_precision = new Integer (cur.getStdPrecision());
+				m_precision = Integer.valueOf(cur.getStdPrecision());
 				return m_precision.intValue();
 			}
 		}
@@ -466,7 +479,7 @@ public class MOrderLine extends X_C_OrderLine implements IDocumentLine
 			+ "FROM C_Currency c INNER JOIN C_Order x ON (x.C_Currency_ID=c.C_Currency_ID) "
 			+ "WHERE x.C_Order_ID=?";
 		int i = DB.getSQLValue(get_TrxName(), sql, getC_Order_ID());
-		m_precision = new Integer(i);
+		m_precision = Integer.valueOf(i);
 		return m_precision.intValue();
 	}	//	getPrecision
 	
@@ -526,7 +539,7 @@ public class MOrderLine extends X_C_OrderLine implements IDocumentLine
 	public MProduct getProduct()
 	{
 		if (m_product == null && getM_Product_ID() != 0)
-			m_product =  MProduct.get (getCtx(), getM_Product_ID());
+			m_product =  MProduct.get (getCtx(), getM_Product_ID(), get_TrxName());
 		return m_product;
 	}	//	getProduct
 	
@@ -537,7 +550,7 @@ public class MOrderLine extends X_C_OrderLine implements IDocumentLine
 	public void setM_AttributeSetInstance_ID (int M_AttributeSetInstance_ID)
 	{
 		if (M_AttributeSetInstance_ID == 0)		//	 0 is valid ID
-			set_Value("M_AttributeSetInstance_ID", new Integer(0));
+			set_Value("M_AttributeSetInstance_ID", Integer.valueOf(0));
 		else
 			super.setM_AttributeSetInstance_ID (M_AttributeSetInstance_ID);
 	}	//	setM_AttributeSetInstance_ID
@@ -565,11 +578,6 @@ public class MOrderLine extends X_C_OrderLine implements IDocumentLine
 		if (getQtyDelivered().signum() != 0)
 		{
 			log.saveError("Error", Msg.translate(getCtx(), "QtyDelivered") + "=" + getQtyDelivered());
-			return false;
-		}
-		if (getQtyInvoiced().signum() != 0)
-		{
-			log.saveError("Error", Msg.translate(getCtx(), "QtyInvoiced") + "=" + getQtyInvoiced());
 			return false;
 		}
 		if (getQtyReserved().signum() != 0)
@@ -672,7 +680,7 @@ public class MOrderLine extends X_C_OrderLine implements IDocumentLine
 			return;
 		BigDecimal discount = list.subtract(getPriceActual())
 			.multiply(new BigDecimal(100))
-			.divide(list, getPrecision(), BigDecimal.ROUND_HALF_UP);
+			.divide(list, getPrecision(), RoundingMode.HALF_UP);
 		setDiscount(discount);
 	}	//	setDiscount
 
@@ -713,7 +721,7 @@ public class MOrderLine extends X_C_OrderLine implements IDocumentLine
 		if (QtyEntered != null && getC_UOM_ID() != 0)
 		{
 			int precision = MUOM.getPrecision(getCtx(), getC_UOM_ID());
-			QtyEntered = QtyEntered.setScale(precision, BigDecimal.ROUND_HALF_UP);
+			QtyEntered = QtyEntered.setScale(precision, RoundingMode.HALF_UP);
 		}
 		super.setQtyEntered (QtyEntered);
 	}	//	setQtyEntered
@@ -728,7 +736,7 @@ public class MOrderLine extends X_C_OrderLine implements IDocumentLine
 		if (QtyOrdered != null && product != null)
 		{
 			int precision = product.getUOMPrecision();
-			QtyOrdered = QtyOrdered.setScale(precision, BigDecimal.ROUND_HALF_UP);
+			QtyOrdered = QtyOrdered.setScale(precision, RoundingMode.HALF_UP);
 		}
 		super.setQtyOrdered(QtyOrdered);
 	}	//	setQtyOrdered
@@ -746,6 +754,9 @@ public class MOrderLine extends X_C_OrderLine implements IDocumentLine
 		//	Product
 		if(inOutLineReference.getM_Product_ID() != 0) {
 			setM_Product_ID(inOutLineReference.getM_Product_ID());
+			if(inOutLineReference.getM_AttributeSetInstance_ID() > 0) {
+				setM_AttributeSetInstance_ID(inOutLineReference.getM_AttributeSetInstance_ID());
+			}
 		}
 		if(inOutLineReference.getC_UOM_ID() != 0) {
 			setC_UOM_ID(inOutLineReference.getC_UOM_ID());
@@ -778,14 +789,75 @@ public class MOrderLine extends X_C_OrderLine implements IDocumentLine
 		//	Set Price from Invoice / Order
 		if (invoiceLineReferenceId != 0) {
             MInvoiceLine invoiceLine = new MInvoiceLine(getCtx(), invoiceLineReferenceId, get_TrxName());
+            setPriceList(invoiceLine.getPriceList());
             setPriceEntered(invoiceLine.getPriceEntered());
             setPriceActual(invoiceLine.getPriceActual());
             setC_Tax_ID(invoiceLine.getC_Tax_ID());
         } else if (inOutLineReference.getC_OrderLine_ID() != 0) {
             MOrderLine orderLine = new MOrderLine (getCtx(), inOutLineReference.getC_OrderLine_ID(), get_TrxName());
+            setPriceList(orderLine.getPriceList());
             setPriceEntered(orderLine.getPriceEntered());
             setPriceActual(orderLine.getPriceActual());
             setC_Tax_ID(orderLine.getC_Tax_ID());
+        }
+	}
+	
+	/**
+	 * Set reference for RMA
+	 * @param invoiceLineReference
+	 */
+	public void setRef_InvoiceLine(MInvoiceLine invoiceLineReference) {
+		//	Charge
+		if(invoiceLineReference.getC_Charge_ID() != 0) {
+			setC_Charge_ID(invoiceLineReference.getC_Charge_ID());
+		}
+		//	Product
+		if(invoiceLineReference.getM_Product_ID() != 0) {
+			setM_Product_ID(invoiceLineReference.getM_Product_ID());
+			if(invoiceLineReference.getM_AttributeSetInstance_ID() > 0) {
+				setM_AttributeSetInstance_ID(invoiceLineReference.getM_AttributeSetInstance_ID());
+			}
+		}
+		if(invoiceLineReference.getC_UOM_ID() != 0) {
+			setC_UOM_ID(invoiceLineReference.getC_UOM_ID());
+		}
+		if(invoiceLineReference.getAD_OrgTrx_ID() != 0) {
+			setAD_OrgTrx_ID(invoiceLineReference.getAD_OrgTrx_ID());
+		}
+		if(invoiceLineReference.getC_Project_ID() != 0) {
+			setC_Project_ID(invoiceLineReference.getC_Project_ID());
+		}
+		if(invoiceLineReference.getC_Campaign_ID() != 0) {
+			setC_Campaign_ID(invoiceLineReference.getC_Campaign_ID());
+		}
+		if(invoiceLineReference.getC_Activity_ID() != 0) {
+			setC_Activity_ID(invoiceLineReference.getC_Activity_ID());
+		}
+		if(invoiceLineReference.getUser1_ID() != 0) {
+			setUser1_ID(invoiceLineReference.getUser1_ID());
+		}
+		if(invoiceLineReference.getUser2_ID() != 0) {
+			setUser2_ID(invoiceLineReference.getUser2_ID());
+		}
+		if(invoiceLineReference.getUser3_ID() != 0) {
+			setUser3_ID(invoiceLineReference.getUser3_ID());
+		}
+		if(invoiceLineReference.getUser4_ID() != 0) {
+			setUser4_ID(invoiceLineReference.getUser4_ID());
+		}
+		setRef_InvoiceLine_ID(invoiceLineReference.getC_InvoiceLine_ID());
+		//	Set Price from Invoice / Order
+		setPriceList(invoiceLineReference.getPriceList());
+		setPriceEntered(invoiceLineReference.getPriceEntered());
+        setPriceActual(invoiceLineReference.getPriceActual());
+        setC_Tax_ID(invoiceLineReference.getC_Tax_ID());
+        int inOutLineReferenceId = invoiceLineReference.getM_InOutLine_ID();
+        if(inOutLineReferenceId == 0) {
+        	inOutLineReferenceId = invoiceLineReference.getInOutLineId();
+        }
+		//	Set Price from Invoice / Order
+		if (inOutLineReferenceId != 0) {
+            setRef_InOutLine_ID(inOutLineReferenceId);
         }
 	}
 	
@@ -834,7 +906,15 @@ public class MOrderLine extends X_C_OrderLine implements IDocumentLine
 			//	Check if on Price list
 			if (m_productPrice == null)
 				getProductPricing(m_M_PriceList_ID);
-			if (!m_productPrice.isCalculated()) {
+			if (!m_productPrice.isCalculated()
+					&& !isProcessed()
+					&& (newRecord
+							|| is_ValueChanged(COLUMNNAME_M_Product_ID)
+							|| is_ValueChanged(COLUMNNAME_C_UOM_ID)
+							|| is_ValueChanged(COLUMNNAME_QtyEntered)
+							|| is_ValueChanged(COLUMNNAME_PriceEntered)
+							|| is_ValueChanged(COLUMNNAME_Discount)
+							|| is_ValueChanged(COLUMNNAME_PriceEntered))) {
 				MDocType documentType = MDocType.get(getCtx(), getParent().getC_DocTypeTarget_ID());
 				if(Util.isEmpty(documentType.getDocSubTypeSO())
 						|| !documentType.getDocSubTypeSO().equals(MDocType.DOCSUBTYPESO_ReturnMaterial)) {
@@ -963,14 +1043,14 @@ public class MOrderLine extends X_C_OrderLine implements IDocumentLine
 	{
 		if (!success)
 			return success;
-		if (!newRecord && is_ValueChanged("C_Tax_ID"))
-		{
-			//	Recalculate Tax for old Tax
-			if (!getParent().isProcessed())
-				if (!updateOrderTax(true))
-					return false;
-		}
-		return updateHeaderTax();
+		if (newRecord
+				|| (!newRecord && is_ValueChanged(MOrderLine.COLUMNNAME_C_Tax_ID) && !getParent().isProcessed())
+				|| (!newRecord && is_ValueChanged(MOrderLine.COLUMNNAME_QtyEntered) && !getParent().isProcessed())
+				|| (!newRecord && is_ValueChanged(MOrderLine.COLUMNNAME_PriceActual) && !getParent().isProcessed())
+		)
+			return updateHeaderTax();
+
+		return true;
 	}	//	afterSave
 
 	/**
@@ -992,30 +1072,6 @@ public class MOrderLine extends X_C_OrderLine implements IDocumentLine
 	}	//	afterDelete
 	
 	/**
-	 * Recalculate order tax
-	 * @param oldTax true if the old C_Tax_ID should be used
-	 * @return true if success, false otherwise
-	 * 
-	 * @author teo_sarca [ 1583825 ]
-	 */
-	private boolean updateOrderTax(boolean oldTax) {
-		MOrderTax tax = MOrderTax.get (this, getPrecision(), oldTax, get_TrxName());
-		if (tax != null) {
-			if (!tax.calculateTaxFromLines())
-				return false;
-			if (tax.getTaxAmt().signum() != 0) {
-				if (!tax.save(get_TrxName()))
-					return false;
-			}
-			else {
-				if (!tax.is_new() && !tax.delete(false, get_TrxName()))
-					return false;
-			}
-		}
-		return true;
-	}
-	
-	/**
 	 *	Update Tax & Header
 	 *	@return true if header updated
 	 */
@@ -1023,8 +1079,7 @@ public class MOrderLine extends X_C_OrderLine implements IDocumentLine
 	{
 		//	Recalculate Tax for this Tax
 		if (!getParent().isProcessed())
-			if (!updateOrderTax(false))
-				return false;
+				getParent().calculateTaxTotal();
 		
 		//	Update Order Header
 		String sql = "UPDATE C_Order i"
@@ -1051,6 +1106,59 @@ public class MOrderLine extends X_C_OrderLine implements IDocumentLine
 		return no == 1;
 	}	//	updateHeaderTax
 
+	public void reserveStock() {
+		//	Binding
+		BigDecimal target = getParent().isBinding() ? getQtyOrdered() : Env.ZERO;
+		BigDecimal difference = target.subtract(getQtyReserved()).subtract(getQtyDelivered());
+		if (difference.signum() == 0)
+			return;
+
+		log.fine("Line=" + getLine()
+				+ " - Target=" + target + ",Difference=" + difference
+				+ " - Ordered=" + getQtyOrdered()
+				+ ",Reserved=" + getQtyReserved() + ",Delivered=" + getQtyDelivered());
+
+		//	Check Product - Stocked and Item
+		MProduct product = getProduct();
+		if (product != null) {
+			if (product.isStocked()) {
+				//	Mandatory Product Attribute Set Instance
+				MAttributeSet.validateAttributeSetInstanceMandatory(product, Table_ID, isSOTrx(), getM_AttributeSetInstance_ID());
+				BigDecimal ordered = isSOTrx() ? Env.ZERO : difference;
+				BigDecimal reserved = isSOTrx() ? difference : Env.ZERO;
+				//	update line
+				setQtyReserved(getQtyReserved().add(difference));
+				int locatorId = 0;
+				//	Get Locator to reserve
+				if (getM_AttributeSetInstance_ID() != 0)    //	Get existing Location
+					locatorId = MStorage.getM_Locator_ID(getM_Warehouse_ID(),
+							getM_Product_ID(), getM_AttributeSetInstance_ID(),
+							ordered, get_TrxName());
+				//	Get default Location
+				if (locatorId == 0) {
+					// try to take default locator for product first
+					// if it is from the selected warehouse
+					MWarehouse warehouse = MWarehouse.get(getCtx(), getM_Warehouse_ID());
+					locatorId = product.getM_Locator_ID();
+					if (locatorId != 0) {
+						MLocator locator = new MLocator(getCtx(), product.getM_Locator_ID(), get_TrxName());
+						//product has default locator defined but is not from the order warehouse
+						if (locator.getM_Warehouse_ID() != warehouse.get_ID()) {
+							locatorId = warehouse.getDefaultLocator().getM_Locator_ID();
+						}
+					} else {
+						locatorId = warehouse.getDefaultLocator().getM_Locator_ID();
+					}
+				}
+				//	Update Storage
+				MStorage.add(getCtx(), getM_Warehouse_ID(), locatorId,
+						getM_Product_ID(),
+						getM_AttributeSetInstance_ID(), getM_AttributeSetInstance_ID(),
+						Env.ZERO, reserved, ordered, get_TrxName());
+			}    //	stocked
+		}
+	}
+
 	@Override
 	public int getM_Locator_ID() {
 		// TODO Auto-generated method stub
@@ -1063,6 +1171,10 @@ public class MOrderLine extends X_C_OrderLine implements IDocumentLine
 		return this.getQtyEntered();
 	}
 
+	public BigDecimal getQtyToDelivery() {
+		return getQtyOrdered().subtract(getQtyDelivered());
+	}
+
 	@Override
 	public int getReversalLine_ID() {
 		// TODO Auto-generated method stub
@@ -1071,8 +1183,7 @@ public class MOrderLine extends X_C_OrderLine implements IDocumentLine
 
 	@Override
 	public boolean isSOTrx() {
-		// TODO Auto-generated method stub
-		return false;
+		return getParent().isSOTrx();
 	}
 
 	@Override
