@@ -22,6 +22,7 @@ import java.sql.ResultSet;
 import java.util.Properties;
 import java.util.logging.Level;
 
+import org.adempiere.core.domains.models.X_C_OrderTax;
 import org.compiere.util.CLogger;
 import org.compiere.util.DB;
 import org.compiere.util.Env;
@@ -183,7 +184,7 @@ public class MOrderTax extends X_C_OrderTax
 	 */
 	protected void setPrecision (int precision)
 	{
-		m_precision = new Integer(precision);
+		m_precision = Integer.valueOf(precision);
 	}	//	setPrecision
 
 	/**
