@@ -21,6 +21,12 @@ import java.sql.ResultSet;
 import java.util.List;
 import java.util.Properties;
 
+import org.adempiere.core.domains.models.I_AD_Memo;
+import org.adempiere.core.domains.models.I_C_UOM_Conversion;
+import org.adempiere.core.domains.models.I_M_CostDetail;
+import org.adempiere.core.domains.models.I_M_ProductDownload;
+import org.adempiere.core.domains.models.X_I_Product;
+import org.adempiere.core.domains.models.X_M_Product;
 import org.adempiere.exceptions.AdempiereException;
 import org.compiere.util.CCache;
 import org.compiere.util.DB;
@@ -62,17 +68,30 @@ public class MProduct extends X_M_Product
 	 */
 	public static MProduct get (Properties ctx, int M_Product_ID)
 	{
+	    return get(ctx, M_Product_ID, null);
+	}
+
+   /**
+     *  Get MProduct from Cache
+     *  @param ctx context
+     *  @param M_Product_ID id
+     *  @param trxName
+     *  @return MProduct or null
+     */
+   public static MProduct get (Properties ctx, int M_Product_ID, String trxName)
+    {
+
 		if (M_Product_ID <= 0)
 		{
 			return null;
 		}
-		Integer key = new Integer (M_Product_ID);
+		Integer key = Integer.valueOf(M_Product_ID);
 		MProduct retValue = (MProduct) s_cache.get (key);
 		if (retValue != null)
 		{
 			return retValue;
 		}
-		retValue = new MProduct (ctx, M_Product_ID, null);
+		retValue = new MProduct (ctx, M_Product_ID, trxName);
 		if (retValue.get_ID () != 0)
 		{
 			s_cache.put (key, retValue);
@@ -435,7 +454,7 @@ public class MProduct extends X_M_Product
 			int C_UOM_ID = getC_UOM_ID();
 			if (C_UOM_ID == 0)
 				return 0;	//	EA
-			m_precision = new Integer (MUOM.getPrecision(getCtx(), C_UOM_ID));
+			m_precision = Integer.valueOf(MUOM.getPrecision(getCtx(), C_UOM_ID));
 		}
 		return m_precision.intValue();
 	}	//	getUOMPrecision
@@ -447,7 +466,7 @@ public class MProduct extends X_M_Product
 	 */
 	public int getA_Asset_Group_ID()
 	{
-		MProductCategory pc = MProductCategory.get(getCtx(), getM_Product_Category_ID());
+		MProductCategory pc = MProductCategory.get(getCtx(), getM_Product_Category_ID(), get_TrxName());
 		return pc.getA_Asset_Group_ID();
 	}	//	getA_Asset_Group_ID
 
@@ -457,7 +476,7 @@ public class MProduct extends X_M_Product
 	 */
 	public boolean isCreateAsset()
 	{
-		MProductCategory pc = MProductCategory.get(getCtx(), getM_Product_Category_ID());
+		MProductCategory pc = MProductCategory.get(getCtx(), getM_Product_Category_ID(), get_TrxName());
 		return pc.getA_Asset_Group_ID() != 0;
 	}	//	isCreated
 
@@ -468,7 +487,7 @@ public class MProduct extends X_M_Product
 	public MAttributeSet getAttributeSet()
 	{
 		if (getM_AttributeSet_ID() != 0)
-			return MAttributeSet.get(getCtx(), getM_AttributeSet_ID());
+			return MAttributeSet.get(getCtx(), getM_AttributeSet_ID(), get_TrxName());
 		return null;
 	}	//	getAttributeSet
 	
@@ -480,7 +499,7 @@ public class MProduct extends X_M_Product
 	{
 		if (getM_AttributeSet_ID() == 0)
 			return false;
-		MAttributeSet mas = MAttributeSet.get(getCtx(), getM_AttributeSet_ID());
+		MAttributeSet mas = MAttributeSet.get(getCtx(), getM_AttributeSet_ID(), get_TrxName());
 		return mas.isInstanceAttribute();
 	}	//	isInstanceAttribute
 	
@@ -493,9 +512,11 @@ public class MProduct extends X_M_Product
 		MProductCategory pc = MProductCategory.get(getCtx(), getM_Product_Category_ID());
 		if (pc.getA_Asset_Group_ID() == 0)
 			return false;
-		//MAssetGroup.get(getCtx(), pc.getA_Asset_Group_ID());
-		//return ag.isOneAssetPerUOM();
-		return  pc.getA_Asset_Group().isOneAssetPerUOM();
+		PO assetGroup = MTable.get(getCtx(), "A_Asset_Group").getPO(pc.getA_Asset_Group_ID(), get_TrxName());
+		if(assetGroup != null) {
+			return assetGroup.get_ValueAsBoolean("IsOneAssetPerUOM");
+		}
+		return false;
 	}	//	isOneAssetPerUOM
 	
 	/**
@@ -628,7 +649,7 @@ public class MProduct extends X_M_Product
 
 		if (getM_AttributeSet_ID() > 0 )
 		{
-			MAttributeSet attributeSet = MAttributeSet.get(getCtx(), getM_AttributeSet_ID());
+			MAttributeSet attributeSet = MAttributeSet.get(getCtx(), getM_AttributeSet_ID(), get_TrxName());
 			if (!attributeSet.isInstanceAttribute() && attributeSet.isMandatoryAlways() && getM_AttributeSetInstance_ID() == 0)
 				throw new AdempiereException("@M_AttributeSetInstance_ID@ @FillMandatory@ @M_AttributeSetInstance_ID@ : " + attributeSet.getName());
 
@@ -871,7 +892,7 @@ public class MProduct extends X_M_Product
 	 * @return Material Management Policy
 	 */
 	public String getMMPolicy() {
-		MProductCategory pc = MProductCategory.get(getCtx(), getM_Product_Category_ID());
+		MProductCategory pc = MProductCategory.get(getCtx(), getM_Product_Category_ID(), get_TrxName());
 		String MMPolicy = pc.getMMPolicy();
 		if (MMPolicy == null || MMPolicy.length() == 0)
 			MMPolicy = MClient.get(getCtx()).getMMPolicy();
@@ -1013,7 +1034,7 @@ public class MProduct extends X_M_Product
 		{
 			//  If the product has a product instance associated with it. Use it regardless of the context.
 			//  Product Attributes and Instance Attributes are exclusive
-				M_AttributeSetInstance_ID = new Integer(getM_AttributeSetInstance_ID());
+				M_AttributeSetInstance_ID = Integer.valueOf(getM_AttributeSetInstance_ID());
 		} 
 		else if (getM_AttributeSet_ID() > 0 && M_AttributeSetInstance_ID > 0)
 		{
