@@ -24,6 +24,7 @@ import java.util.Properties;
 import java.util.Vector;
 import java.util.logging.Level;
 
+import org.adempiere.core.domains.models.X_M_Product_Category;
 import org.compiere.util.CCache;
 import org.compiere.util.CLogger;
 import org.compiere.util.DB;
@@ -52,10 +53,23 @@ public class MProductCategory extends X_M_Product_Category
 	 */
 	public static MProductCategory get (Properties ctx, int M_Product_Category_ID)
 	{
-		Integer ii = new Integer (M_Product_Category_ID);
+	    return get(ctx, M_Product_Category_ID, null);
+	}
+
+    /**
+     *  Get from Cache
+     *  @param ctx context
+     *  @param M_Product_Category_ID id
+     *  @Param trxName The Transaction Name
+     *  @return category
+     */	
+	public static MProductCategory get (Properties ctx, int M_Product_Category_ID, String trxName)
+    {
+
+	    Integer ii = Integer.valueOf(M_Product_Category_ID);
 		MProductCategory pc = (MProductCategory)s_cache.get(ii);
 		if (pc == null)
-			pc = new MProductCategory (ctx, M_Product_Category_ID, null);
+			pc = new MProductCategory (ctx, M_Product_Category_ID, trxName);
 		return pc;
 	}	//	get
 	
@@ -70,7 +84,7 @@ public class MProductCategory extends X_M_Product_Category
 		if (M_Product_ID == 0 || M_Product_Category_ID == 0)
 			return false;
 		//	Look up
-		Integer product = new Integer (M_Product_ID);
+		Integer product = Integer.valueOf(M_Product_ID);
 		Integer category = (Integer)s_products.get(product);
 		if (category != null)
 			return category.intValue() == M_Product_Category_ID;
@@ -83,7 +97,7 @@ public class MProductCategory extends X_M_Product_Category
 			pstmt.setInt (1, M_Product_ID);
 			ResultSet rs = pstmt.executeQuery ();
 			if (rs.next ())
-				category = new Integer(rs.getInt(1));
+				category = Integer.valueOf(rs.getInt(1));
 			rs.close ();
 			pstmt.close ();
 			pstmt = null;
