@@ -34,6 +34,7 @@ import java.util.Properties;
 import java.util.Vector;
 import java.util.logging.Level;
 
+import org.adempiere.core.domains.models.X_AD_Sequence;
 import org.adempiere.exceptions.AdempiereException;
 import org.adempiere.exceptions.DBException;
 import org.compiere.db.CConnection;
@@ -156,6 +157,9 @@ public class MSequence extends X_AD_Sequence
 
 					// Get the table
 					MTable table = MTable.get(Env.getCtx(), TableName);
+					// Set the transaction from Persistence Object avoid null transaction error
+					if (table.get_TrxName() == null && trxName != null)
+						table.set_TrxName(trxName);
 
 					int AD_Sequence_ID = rs.getInt(4);
 					boolean gotFromHTTP = false;
@@ -262,8 +266,7 @@ public class MSequence extends X_AD_Sequence
 			finally
 			{
 				DB.close(rs, pstmt);
-				pstmt = null;
-				rs = null;
+				rs = null; pstmt = null;
 				if (conn != null)
 				{
 					try {
@@ -316,6 +319,7 @@ public class MSequence extends X_AD_Sequence
 		finally
 		{
 			DB.close(cstmt);
+			cstmt = null;
 		}
 		return retValue;
 	}	//	nextID
@@ -354,6 +358,7 @@ public class MSequence extends X_AD_Sequence
 			s_log.log(Level.SEVERE, e.toString());
 		} finally {
 			DB.close(cstmt);
+			cstmt = null;
 		}
 		return retValue;
 	} // nextID
@@ -419,6 +424,7 @@ public class MSequence extends X_AD_Sequence
 			finally
 			{
 				DB.close(rs, pstmt);
+				rs = null; pstmt = null;
 			}
 		}
 
@@ -584,6 +590,7 @@ public class MSequence extends X_AD_Sequence
 		{
 			//Finish
 			DB.close(rs, pstmt);
+			rs = null; pstmt = null;
 			try
 			{
 				if (trx == null && conn != null) {
@@ -708,6 +715,7 @@ public class MSequence extends X_AD_Sequence
 			finally
 			{
 				DB.close(rs, pstmt);
+				rs = null; pstmt = null;
 			}
 		}
 
@@ -1047,8 +1055,7 @@ public class MSequence extends X_AD_Sequence
 		finally
 		{
 			DB.close(rs, pstmt);
-			rs = null;
-			pstmt = null;
+			rs = null; pstmt = null;
 		}
 		return retValue;
 	}	//	get
@@ -1427,7 +1434,7 @@ public class MSequence extends X_AD_Sequence
 				try
 				{
 					int no = DB.getNextID(0, "Test", null);
-					s_list.add(new Integer(no));
+					s_list.add(Integer.valueOf(no));
 				//	System.out.println("#" + m_i + ": " + no);
 				}
 				catch (Exception e)
@@ -1591,8 +1598,7 @@ public class MSequence extends X_AD_Sequence
 			d = new Date();
 		SimpleDateFormat sdf = new SimpleDateFormat("yyyy");
 		String calendarYear = sdf.format(d);
-		String sql = "select CurrentNext From AD_Sequence_No Where AD_Sequence_ID = ? and CalendarYear = ?";
-
+		String sql = "SELECT CurrentNext FROM AD_Sequence_No WHERE AD_Sequence_ID = ? AND CalendarYear = ?";
 		return DB.getSQLValueString(trxName, sql, AD_Sequence_ID, calendarYear);
 	}
 
