@@ -19,6 +19,7 @@
  */
 package org.compiere.model;
 
+import org.adempiere.core.domains.models.X_AD_TreeNodeU2;
 import org.compiere.util.CLogger;
 
 import java.sql.ResultSet;
@@ -92,6 +93,6 @@ public class MTree_NodeU2 extends X_AD_TreeNodeU2 {
      *    @param parentId
      */
     public void setParent_ID(int parentId) {
-        set_Value("Parent_ID", new Integer(parentId));
+        set_Value("Parent_ID", Integer.valueOf(parentId));
     }
 }
