@@ -34,8 +34,10 @@ import java.util.Comparator;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Optional;
 import java.util.Properties;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.logging.Level;
 import java.util.stream.Collectors;
 
@@ -46,6 +48,9 @@ import javax.xml.transform.TransformerFactory;
 import javax.xml.transform.dom.DOMSource;
 import javax.xml.transform.stream.StreamResult;
 
+import org.adempiere.core.domains.models.I_AD_Element;
+import org.adempiere.core.domains.models.I_AD_Session;
+import org.adempiere.core.domains.models.X_C_ElementValue;
 import org.adempiere.exceptions.AdempiereException;
 import org.adempiere.exceptions.DBException;
 import org.adempiere.model.GenericPO;
@@ -279,7 +284,7 @@ public abstract class PO
 	private HashMap<String,String>	m_custom = null;
 
 	/** Zero Integer				*/
-	protected static final Integer I_ZERO = new Integer(0);
+	protected static final Integer I_ZERO = Integer.valueOf(0);
 	/** Accounting Columns			*/
 	private ArrayList <String>	s_acctColumns = null;
 
@@ -694,7 +699,7 @@ public abstract class PO
 		{
 			int result = ((Integer)nValue).intValue();
 			result -= ((Integer)oValue).intValue();
-			return new Integer(result);
+			return Integer.valueOf(result);
 		}
 		//
 		log.warning("Invalid type - New=" + nValue);
@@ -815,11 +820,11 @@ public abstract class PO
 			//  Integer can be set as BigDecimal
 			else if (value.getClass() == BigDecimal.class
 				&& p_info.getColumnClass(index) == Integer.class)
-				m_newValues[index] = new Integer (((BigDecimal)value).intValue());
+				m_newValues[index] = Integer.valueOf(((BigDecimal)value).intValue());
 			//	Set Boolean
 			else if (p_info.getColumnClass(index) == Boolean.class
 				&& ("Y".equals(value) || "N".equals(value)) )
-				m_newValues[index] = new Boolean("Y".equals(value));
+				m_newValues[index] = Boolean.valueOf("Y".equals(value));
 			// added by vpj-cd
 			// To solve BUG [ 1618423 ] Set Project Type button in Project window throws warning
 			// generated because C_Project.C_Project_Type_ID is defined as button in dictionary
@@ -831,7 +836,7 @@ public abstract class PO
 					&& p_info.getColumnClass(index) == Integer.class)
 				try
 				{
-					m_newValues[index] = new Integer((String)value);
+					m_newValues[index] = Integer.valueOf((String)value);
 				}
 				catch (NumberFormatException e)
 				{
@@ -941,11 +946,11 @@ public abstract class PO
 			//  Integer can be set as BigDecimal
 			else if (value.getClass() == BigDecimal.class
 				&& p_info.getColumnClass(index) == Integer.class)
-				m_newValues[index] = new Integer (((BigDecimal)value).intValue());
+				m_newValues[index] = Integer.valueOf(((BigDecimal) value).intValue());
 			//	Set Boolean
 			else if (p_info.getColumnClass(index) == Boolean.class
 				&& ("Y".equals(value) || "N".equals(value)) )
-				m_newValues[index] = new Boolean("Y".equals(value));
+				m_newValues[index] = Boolean.valueOf("Y".equals(value));
 			else if (p_info.getColumnClass(index) == Integer.class
 				&& value.getClass() == String.class)
 			{
@@ -1345,14 +1350,7 @@ public abstract class PO
 					continue;
 				String colName = from.p_info.getColumnName(i1);
 				//  Ignore Standard Values
-				if (colName.startsWith("Created")
-					|| colName.startsWith("Updated")
-					|| colName.equals("IsActive")
-					|| colName.equals("AD_Client_ID")
-					|| colName.equals("AD_Org_ID")
-					|| colName.equals("Processing")
-					|| colName.equals("UUID")
-					)
+				if (M_Element.isReservedColumnName(colName))
 					;	//	ignore
 				else
 				{
@@ -1406,7 +1404,7 @@ public abstract class PO
 		{
 			setKeyInfo();
 			//m_KeyColumns = new String[] {p_info.getTableName() + "_ID"};
-			m_IDs = new Object[] {new Integer(ID)};
+			m_IDs = new Object[] {Integer.valueOf(ID)};
 			load(trxName);
 		}
 		else	//	new
@@ -1514,11 +1512,11 @@ public abstract class PO
 			try
 			{
 				if (clazz == Integer.class)
-					m_oldValues[index] = decrypt(index, new Integer(rs.getInt(columnName)));
+					m_oldValues[index] = decrypt(index, Integer.valueOf(rs.getInt(columnName)));
 				else if (clazz == BigDecimal.class)
 					m_oldValues[index] = decrypt(index, rs.getBigDecimal(columnName));
 				else if (clazz == Boolean.class)
-					m_oldValues[index] = new Boolean ("Y".equals(decrypt(index, rs.getString(columnName))));
+					m_oldValues[index] = Boolean.valueOf("Y".equals(decrypt(index, rs.getString(columnName))));
 				else if (clazz == Timestamp.class)
 					m_oldValues[index] = decrypt(index, rs.getTimestamp(columnName));
 				else if (DisplayType.isLOB(dt) || (DisplayType.isText(dt) && p_info.getFieldLength(index) > 4000))
@@ -1578,11 +1576,11 @@ public abstract class PO
 			try
 			{
 				if (clazz == Integer.class)
-					m_oldValues[index] = new Integer(value);
+					m_oldValues[index] = Integer.valueOf(value);
 				else if (clazz == BigDecimal.class)
 					m_oldValues[index] = new BigDecimal(value);
 				else if (clazz == Boolean.class)
-					m_oldValues[index] = new Boolean ("Y".equals(value));
+					m_oldValues[index] = Boolean.valueOf("Y".equals(value));
 				else if (clazz == Timestamp.class)
 					m_oldValues[index] = Timestamp.valueOf(value);
 				else if (DisplayType.isLOB(dt))
@@ -1730,23 +1728,23 @@ public abstract class PO
 			String colName = p_info.getColumnName(i);
 			//  Set Standard Values
 			if (colName.endsWith("tedBy"))
-				m_newValues[i] = new Integer (Env.getContextAsInt(p_ctx, "#AD_User_ID"));
+				m_newValues[i] = Integer.valueOf(Env.getContextAsInt(p_ctx, "#AD_User_ID"));
 			else if (colName.equals("Created") || colName.equals("Updated"))
 				m_newValues[i] = new Timestamp (System.currentTimeMillis());
 			else if (colName.equals(p_info.getTableName() + "_ID"))    //  KeyColumn
 				m_newValues[i] = I_ZERO;
 			else if (colName.equals("IsActive"))
-				m_newValues[i] = new Boolean(true);
+				m_newValues[i] = Boolean.TRUE;
 			else if (colName.equals("AD_Client_ID"))
-				m_newValues[i] = new Integer(Env.getAD_Client_ID(p_ctx));
+				m_newValues[i] = Integer.valueOf(Env.getAD_Client_ID(p_ctx));
 			else if (colName.equals("AD_Org_ID"))
-				m_newValues[i] = new Integer(Env.getAD_Org_ID(p_ctx));
+				m_newValues[i] = Integer.valueOf(Env.getAD_Org_ID(p_ctx));
 			else if (colName.equals("Processed"))
-				m_newValues[i] = new Boolean(false);
+				m_newValues[i] = Boolean.FALSE;
 			else if (colName.equals("Processing"))
-				m_newValues[i] = new Boolean(false);
+				m_newValues[i] = Boolean.FALSE;
 			else if (colName.equals("Posted"))
-				m_newValues[i] = new Boolean(false);
+				m_newValues[i] = Boolean.FALSE;
 			else
 				m_newValues[i] = getDefaultValue(get_ColumnName(i));
 		}
@@ -1889,7 +1887,7 @@ public abstract class PO
 	 */
 	final protected void setAD_Client_ID (int AD_Client_ID)
 	{
-		set_ValueNoCheck ("AD_Client_ID", new Integer(AD_Client_ID));
+		set_ValueNoCheck("AD_Client_ID", Integer.valueOf(AD_Client_ID));
 	}	//	setAD_Client_ID
 
 	/**
@@ -1910,7 +1908,7 @@ public abstract class PO
 	 */
 	final public void setAD_Org_ID (int AD_Org_ID)
 	{
-		set_ValueNoCheck ("AD_Org_ID", new Integer(AD_Org_ID));
+		set_ValueNoCheck("AD_Org_ID", Integer.valueOf(AD_Org_ID));
 	}	//	setAD_Org_ID
 
 	/**
@@ -1953,7 +1951,7 @@ public abstract class PO
 	 */
 	public final void setIsActive (boolean active)
 	{
-		set_Value("IsActive", new Boolean(active));
+		set_Value("IsActive", Boolean.valueOf(active));
 	}	//	setActive
 
 	/**
@@ -2016,7 +2014,7 @@ public abstract class PO
 	 */
 	final protected void setUpdatedBy (int AD_User_ID)
 	{
-		set_ValueNoCheck ("UpdatedBy", new Integer(AD_User_ID));
+		set_ValueNoCheck("UpdatedBy", Integer.valueOf(AD_User_ID));
 	}	//	setAD_User_ID
 
 	/**
@@ -2177,7 +2175,7 @@ public abstract class PO
 				log.warning("beforeSave failed - " + toString());
 				if (localTrx != null)
 				{
-					localTrx.rollback();
+					localTrx.rollback(true);
 					localTrx.close();
 					m_trxName = null;
 				}
@@ -2221,7 +2219,7 @@ public abstract class PO
 				log.saveError("Error", errorMsg);
 				if (localTrx != null)
 				{
-					localTrx.rollback();
+					localTrx.rollback(true);
 					m_trxName = null;
 				}
 				else
@@ -2237,14 +2235,14 @@ public abstract class PO
 				if (b)
 				{
 					if (localTrx != null)
-						return localTrx.commit();
+						return localTrx.commit(true);
 					else
 						return b;
 				}
 				else
 				{
 					if (localTrx != null)
-						localTrx.rollback();
+						localTrx.rollback(true);
 					else
 						trx.rollback(savepoint);
 					return b;
@@ -2256,23 +2254,23 @@ public abstract class PO
 				if (b)
 				{
 					if (localTrx != null)
-						return localTrx.commit();
+						return localTrx.commit(true);
 					else
 						return b;
 				}
 				else
 				{
 					if (localTrx != null)
-						localTrx.rollback();
+						localTrx.rollback(true);
 					else
 						trx.rollback(savepoint);
 					return b;
 				}
 			}
 		}
-		catch (SQLException e)
+		catch (Exception e)
 		{
-			log.log(Level.WARNING, "afterSave - " + toString(), e);
+			log.saveError("Error", e);
 			if (localTrx != null)
 			{
 				localTrx.rollback();
@@ -2287,25 +2285,20 @@ public abstract class PO
 			}
 			return false;
 		}
-		finally
-		{
-			if (localTrx != null)
-			{
-				localTrx.close();
-				m_trxName = null;
-			}
-			else
-			{
-				if (savepoint != null)
-				{
-					try {
+		finally {
+			try {
+				if (localTrx != null) {
+					localTrx.close();
+					m_trxName = null;
+				} else {
+					if (savepoint != null) {
 						trx.releaseSavepoint(savepoint);
-					} catch (SQLException e) {
-						e.printStackTrace();
 					}
+					savepoint = null;
+					trx = null;
 				}
-				savepoint = null;
-				trx = null;
+			} catch (SQLException e) {
+				log.saveError("Error", e);
 			}
 		}
 	}	//	save
@@ -2520,7 +2513,7 @@ public abstract class PO
 			}
 		}
 		//	Change Log
-		MSession session = MSession.get (p_ctx, false);
+		MSession session = MSession.get (p_ctx, false, !p_info.getTableName().equals(I_AD_Session.Table_Name));
 		if (session == null)
 			log.fine("No Session found");
 		// log migration
@@ -2560,7 +2553,7 @@ public abstract class PO
 				if (!changes && !updatedBy)
 				{
 					int AD_User_ID = Env.getContextAsInt(p_ctx, "#AD_User_ID");
-					set_ValueNoCheck("UpdatedBy", new Integer(AD_User_ID));
+					set_ValueNoCheck("UpdatedBy", Integer.valueOf(AD_User_ID));
 					sql.append("UpdatedBy=").append(AD_User_ID);
 					changes = true;
 					updatedBy = true;
@@ -2627,6 +2620,7 @@ public abstract class PO
 				&& !p_info.isEncrypted(i)		//	not encrypted
 				&& !p_info.isVirtualColumn(i)	//	no virtual column
 				&& !"Password".equals(columnName)
+				&& !p_info.getTableName().equals(I_AD_Session.Table_Name)
 				)
 			{
 				Object oldV = m_oldValues[i];
@@ -2679,7 +2673,7 @@ public abstract class PO
 			if (!updatedBy)	//	UpdatedBy not explicitly set
 			{
 				int AD_User_ID = Env.getContextAsInt(p_ctx, "#AD_User_ID");
-				set_ValueNoCheck("UpdatedBy", new Integer(AD_User_ID));
+				set_ValueNoCheck("UpdatedBy", Integer.valueOf(AD_User_ID));
 				sql.append(",UpdatedBy=").append(AD_User_ID);
 			}
 			sql.append(" WHERE ").append(where);
@@ -2742,7 +2736,7 @@ public abstract class PO
 				log.severe("No NextID (" + no + ")");
 				return saveFinish (true, false);
 			}
-			m_IDs[0] = new Integer(no);
+			m_IDs[0] = Integer.valueOf(no);
 			set_ValueNoCheck(m_KeyColumns[0], m_IDs[0]);
 		}
 		if (m_trxName == null)
@@ -2786,7 +2780,7 @@ public abstract class PO
 		columnName = I_AD_Element.COLUMNNAME_UUID;
 		if (p_info.getColumnIndex(columnName) != -1) {
 			String value = get_ValueAsString(columnName);
-			if (value == null || value.length() == 0) {
+			if (Util.isEmpty(value) || (!isDirectLoad && !isReplication())) {
 				value = DB.getUUID(m_trxName);
 				set_ValueNoCheck(columnName, value);
 			}
@@ -2795,7 +2789,7 @@ public abstract class PO
 		lobReset();
 
 		//	Change Log
-		MSession session = MSession.get (p_ctx, false);
+		MSession session = MSession.get (p_ctx, false, !p_info.getTableName().equals(I_AD_Session.Table_Name));
 		if (session == null)
 			log.fine("No Session found");
 		// log migration
@@ -2883,6 +2877,7 @@ public abstract class PO
 				&& !p_info.isEncrypted(i)		//	not encrypted
 				&& !p_info.isVirtualColumn(i)	//	no virtual column
 				&& !"Password".equals(columnName)
+				&& !p_info.getTableName().equals(I_AD_Session.Table_Name)
 				&& (insertLog.equalsIgnoreCase("Y")
 						|| (insertLog.equalsIgnoreCase("K") && p_info.getColumn(i).IsKey))
 				)
@@ -3149,7 +3144,7 @@ public abstract class PO
 			if (success)
 			{
 
-				MSession session = MSession.get (p_ctx, false);
+				MSession session = MSession.get (p_ctx, false, !p_info.getTableName().equals(I_AD_Session.Table_Name));
 				if (session == null)
 					log.fine("No Session found");
 				else if ( Ini.isPropertyBool(Ini.P_LOGMIGRATIONSCRIPT) )
@@ -3170,6 +3165,7 @@ public abstract class PO
 								&& !p_info.isEncrypted(i)		//	not encrypted
 								&& !p_info.isVirtualColumn(i)	//	no virtual column
 								&& !"Password".equals(p_info.getColumnName(i))
+								&& !p_info.getTableName().equals(I_AD_Session.Table_Name)
 								)
 							{
 								// change log on delete
@@ -3605,24 +3601,38 @@ public abstract class PO
 	 */
 	private boolean insertTreeNode() {	
 		int tableId = get_Table_ID();
+		String whereClause = null;
 		if (!MTree.hasTree(tableId))
 			return false;
 		//	Get Node Table Name
-		String treeTableName = MTree.getNodeTableName(tableId);
+		AtomicReference<String> treeTableName = new AtomicReference<>();
 		int elementId = 0;
 		if (tableId == X_C_ElementValue.Table_ID) {
 			Integer ii = (Integer)get_Value("C_Element_ID");
-			if (ii != null)
+			if (ii != null) {
 				elementId = ii.intValue();
+				whereClause = "C_Element_ID = " + elementId;
+				MElement element = MElement.get(getCtx(), elementId, get_TrxName());
+				Optional.ofNullable(element.getTree()).ifPresent(tree ->{
+					treeTableName.set(MTree.getNodeTableName(tree.getTreeType()));
+				});
+			}
 		}
+		
+		if (treeTableName.get()==null)
+			treeTableName.set(MTree.getNodeTableName(tableId));
+		
 		int m_AD_Tree_ID = MTree.getDefaultTreeIdFromTableId(getAD_Client_ID(), tableId, elementId);
 		//	Valid tree
 		if(m_AD_Tree_ID < 0)
 			return false;
 		
+		if (treeTableName.get()==null)
+			return false;
+		
 		MTree tree = new MTree(getCtx(), m_AD_Tree_ID, get_TrxName());
 		
-		PO treeNode = MTable.get(getCtx(), treeTableName).getPO(0, get_TrxName());
+		PO treeNode = MTable.get(getCtx(), treeTableName.get()).getPO(0, get_TrxName());
 		treeNode.setAD_Client_ID(getAD_Client_ID());
 		treeNode.setAD_Org_ID(0);
 		treeNode.setIsActive(true);
@@ -3633,12 +3643,13 @@ public abstract class PO
 		if (tree.getParent_Column_ID()>0) {
 			parentColumnIDforTree = MColumn.get(getCtx(), tree.getParent_Column_ID());
 			treeNode.set_CustomColumn("Parent_ID", get_ValueAsInt(parentColumnIDforTree.getColumnName()));
-		}
+		}else
+			treeNode.set_CustomColumn("Parent_ID", 0);
 		
 		if (treeNode.get_ValueAsInt("Parent_ID") == 0 
 				&& tree.getAD_ColumnSortOrder_ID() > 0) {
 			MColumn columnSortforTree = MColumn.get(getCtx(), tree.getAD_ColumnSortOrder_ID());
-			treeNode.set_CustomColumn("Parent_ID", getParentFromSort(columnSortforTree.getColumnName(), get_ValueAsString(columnSortforTree.getColumnName())));
+			treeNode.set_CustomColumn("Parent_ID", getParentFromSort(columnSortforTree.getColumnName(), get_ValueAsString(columnSortforTree.getColumnName()), whereClause));
 			if (parentColumnIDforTree!= null) {
 				if (treeNode.get_ValueAsInt("Parent_ID")!=get_ValueAsInt(parentColumnIDforTree.getColumnName())) {
 					set_Value(parentColumnIDforTree.getColumnName(), treeNode.get_ValueAsInt("Parent_ID"));
@@ -3647,8 +3658,7 @@ public abstract class PO
 			}
 			
 		}
-		else
-			treeNode.set_CustomColumn("Parent_ID", 0);
+		
 		
 		treeNode.set_CustomColumn("SeqNo", 999);
 		treeNode.saveEx();
@@ -3666,21 +3676,33 @@ public abstract class PO
 		if (!MTree.hasTree(tableId))
 			return false;
 		//	Get Node Table Name
-		String treeTableName = MTree.getNodeTableName(tableId);
+		AtomicReference<String> treeTableName = new AtomicReference<>();
 		int elementId = 0;
 		if (tableId == X_C_ElementValue.Table_ID) {
 			Integer ii = (Integer)get_Value("C_Element_ID");
-			if (ii != null)
+			if (ii != null) {
 				elementId = ii.intValue();
+				MElement element = MElement.get(getCtx(), elementId, get_TrxName());
+				Optional.ofNullable(element.getTree()).ifPresent(tree ->{
+					treeTableName.set(MTree.getNodeTableName(tree.getTreeType()));
+				});
+			}
 		}
+		
+		if (treeTableName.get()==null)
+			treeTableName.set(MTree.getNodeTableName(tableId));
+		
 		int m_AD_Tree_ID = MTree.getDefaultTreeIdFromTableId(getAD_Client_ID(), tableId, elementId);
 		//	Valid tree
 		if(m_AD_Tree_ID < 0)
 			return false;
 		
+		if (treeTableName.get()==null)
+			return false;
+		
 		MTree tree = new MTree(getCtx(), m_AD_Tree_ID, get_TrxName());
 		
-		PO treeNode = MTable.get(getCtx(), treeTableName).getPO("Node_ID = " + get_ID(), get_TrxName());
+		PO treeNode = MTable.get(getCtx(), treeTableName.get()).getPO("Node_ID = " + get_ID(), get_TrxName());
 		if (treeNode!=null) {
 			if (tree.getParent_Column_ID() > 0) {
 				MColumn columnIDforTree = MColumn.get(getCtx(), tree.getParent_Column_ID());
@@ -3970,7 +3992,7 @@ public abstract class PO
 			pstmt = DB.prepareStatement(sql.toString(), trxName);
 			rs = pstmt.executeQuery();
 			while (rs.next())
-				list.add(new Integer(rs.getInt(1)));
+				list.add(Integer.valueOf(rs.getInt(1)));
 		}
 		catch (SQLException e)
 		{
@@ -4351,10 +4373,12 @@ public abstract class PO
 	 * @param sortValue
 	 * @return
 	 */
-	private int getParentFromSort(String sortColumn ,String sortValue) {
+	private int getParentFromSort(String sortColumn ,String sortValue, String whereClause) {
 		Integer parentID = 0 ;
+		whereClause = Optional.ofNullable(whereClause + " AND ").orElse("");
+		
 		if (sortValue!=null) {
-			List<PO> parentPO = new Query(getCtx(), get_TableName(), "IsSummary = 'Y' ", get_TrxName()).setOrderBy(sortColumn).list();
+			List<PO> parentPO = new Query(getCtx(), get_TableName(), whereClause + " IsSummary = 'Y' ", get_TrxName()).setOrderBy(sortColumn).list();
 			HashMap<String,Integer> currentValues = new HashMap<String,Integer>();
 			
 			for (PO po : parentPO) 
