@@ -64,7 +64,7 @@ public class FinReportJasper extends FinReport
 		for (int i = 0; i < oldpara.length; i++)
 			list.add (oldpara[i]);
 		// and add the T_Report_AD_PInstance_ID parameter
-		list.add (new ProcessInfoParameter("T_Report_AD_PInstance_ID", new Integer(getAD_PInstance_ID()), null, null, null));
+		list.add (new ProcessInfoParameter("T_Report_AD_PInstance_ID", Integer.valueOf(getAD_PInstance_ID()), null, null, null));
 		ProcessInfoParameter[] pars = new ProcessInfoParameter[list.size()];
 		list.toArray(pars);
 
