@@ -20,10 +20,9 @@ import java.sql.ResultSet;
 import java.util.List;
 import java.util.Properties;
 
-import org.compiere.model.MRefList;
+import org.adempiere.core.domains.models.X_AD_WF_NodeNext;
 import org.compiere.model.PO;
 import org.compiere.model.Query;
-import org.compiere.model.X_AD_WF_NodeNext;
 import org.compiere.process.DocAction;
 
 /**
@@ -220,7 +219,7 @@ public class MWFNodeNext extends X_AD_WF_NodeNext
 	 */
 	public void setFromSplitAnd (boolean fromSplitAnd)
 	{
-		m_fromSplitAnd = new Boolean(fromSplitAnd);
+		m_fromSplitAnd = Boolean.valueOf(fromSplitAnd);
 	}	//	setFromSplitAnd
 
 	/**
@@ -245,7 +244,7 @@ public class MWFNodeNext extends X_AD_WF_NodeNext
 	 */
 	private void setToJoinAnd (boolean toJoinAnd)
 	{
-		m_toJoinAnd = new Boolean(toJoinAnd);
+		m_toJoinAnd = Boolean.valueOf(toJoinAnd);
 	}	//	setToJoinAnd
 
 }	//	MWFNodeNext
