@@ -21,12 +21,14 @@ import java.sql.PreparedStatement;
 import java.sql.SQLException;
 import java.sql.Timestamp;
 
+import org.adempiere.core.domains.models.I_A_Asset;
+import org.adempiere.core.domains.models.I_C_BPartner;
+import org.adempiere.core.domains.models.I_M_Product;
 import org.adempiere.plaf.AdempierePLAF;
 import org.compiere.apps.AEnv;
 import org.compiere.apps.ALayoutConstraint;
 import org.compiere.grid.ed.VLookup;
 import org.compiere.minigrid.IDColumn;
-import org.compiere.model.I_A_Asset;
 import org.compiere.model.MColumn;
 import org.compiere.model.MLookupFactory;
 import org.compiere.model.MQuery;
@@ -164,7 +166,7 @@ public class InfoAsset extends Info
 		//	From A_Asset.
 		fBPartner_ID = new VLookup("C_BPartner_ID", false, false, true,
 			MLookupFactory.get (Env.getCtx(), p_WindowNo, 0, 
-					MColumn.getColumn_ID(I_A_Asset.Table_Name, I_A_Asset.COLUMNNAME_C_BPartner_ID),
+					MColumn.getColumn_ID(I_A_Asset.Table_Name, I_C_BPartner.COLUMNNAME_C_BPartner_ID),
 					DisplayType.Search));
 		lBPartner_ID.setLabelFor(fBPartner_ID);
 		fBPartner_ID.setBackground(AdempierePLAF.getInfoBackground());
@@ -172,7 +174,7 @@ public class InfoAsset extends Info
 		
 		fProduct_ID = new VLookup("M_Product_ID", false, false, true,
 			MLookupFactory.get (Env.getCtx(), p_WindowNo, 0, 
-					MColumn.getColumn_ID(I_A_Asset.Table_Name,I_A_Asset.COLUMNNAME_M_Product_ID),
+					MColumn.getColumn_ID(I_A_Asset.Table_Name, I_M_Product.COLUMNNAME_M_Product_ID),
 					DisplayType.Search));
 		lProduct_ID.setLabelFor(fProduct_ID);
 		fProduct_ID.setBackground(AdempierePLAF.getInfoBackground());
@@ -217,19 +219,19 @@ public class InfoAsset extends Info
 	        	String aid = Env.getContext(Env.getCtx(), p_WindowNo, "A_Asset_ID");
 				if (aid != null && aid.length() != 0)
 				{
-					fieldID = new Integer(aid).intValue();
+					fieldID = Integer.valueOf(aid).intValue();
 				}
 				//  C_BPartner_ID
 				String bp = Env.getContext(Env.getCtx(), p_WindowNo, "C_BPartner_ID");
 				if (bp != null && bp.length() != 0)
 				{
-					fBPartner_ID.setValue(new Integer(bp).intValue());
+					fBPartner_ID.setValue(Integer.valueOf(bp).intValue());
 				}
 				//  M_Product_ID
 				String pid = Env.getContext(Env.getCtx(), p_WindowNo, "M_Product_ID");
 				if (pid != null && pid.length() != 0)
 				{
-					fProduct_ID.setValue(new Integer(pid).intValue());
+					fProduct_ID.setValue(Integer.valueOf(pid).intValue());
 				}
 			}
 		}
@@ -342,8 +344,6 @@ public class InfoAsset extends Info
 	{
 		log.info( "InfoAsset.zoom");
 		Integer A_Asset_ID = record_ID;
-		if (A_Asset_ID == null)
-			return;
 		MQuery query = new MQuery("A_Asset");
 		query.addRestriction("A_Asset_ID", MQuery.EQUAL, A_Asset_ID);
 		query.setRecordCount(1);
