@@ -114,7 +114,7 @@ public class WYesNoEditor extends WEditor implements ContextMenuListener
     @Override
     public Object getValue()
     {
-        return new Boolean(getComponent().isChecked());
+        return Boolean.valueOf(getComponent().isChecked());
     }
 
     @Override
